--- a/articles/rfi/999953.md
+++ b/articles/rfi/999953.md
@@ -1,5 +1,5 @@
-<!--1713356102000-->
-[视频 伊朗袭击以色列后 欧盟峰会讨论延长制裁伊朗](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E8%A7%86%E9%A2%91-%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E-%E6%AC%A7%E7%9B%9F%E5%B3%B0%E4%BC%9A%E8%AE%A8%E8%AE%BA%E5%BB%B6%E9%95%BF%E5%88%B6%E8%A3%81%E4%BC%8A%E6%9C%97)
+<!--1713363302000-->
+[法国大办诺曼底登陆80周年庆祝活动 但不邀请普京](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E6%B3%95%E5%9B%BD%E5%A4%A7%E5%8A%9E%E8%AF%BA%E6%9B%BC%E5%BA%95%E7%99%BB%E9%99%8680%E5%91%A8%E5%B9%B4%E5%BA%86%E7%A5%9D%E6%B4%BB%E5%8A%A8-%E4%BD%86%E4%B8%8D%E9%82%80%E8%AF%B7%E6%99%AE%E4%BA%AC)
 ------
 
-<div>17/04/2024 - 13:25</div><img src="https://s.rfi.fr/media/display/7080199c-e6e1-11ee-bb42-005056a97e36/w:1280/p:16x9/AP24080521474896.jpg"><p><strong>欧盟首脑在布鲁塞尔举行会议，中东局势的危险升级是本次欧洲首脑会议的重要议题。欧盟可能跟随美国宣布对伊朗延长制裁措施，详情请见France24台记者 艾利克斯-勒布尔东（Alix Le Bourdon） 报道。        </strong></p><div><p>欧盟首脑今明两天在布鲁塞尔举行27个成员国峰会，中东局势的危险升级是本次欧洲首脑会议的重要议题，根据最新草案，欧盟可能跟随美国宣布对伊朗延长制裁措施，</p><p>France24台记者 艾利克斯-勒布尔东（Alix Le Bourdon） 从布鲁塞尔发出的报道指出，自从伊朗袭击以色列以来，西方外交一直处于紧急状态，欧盟27过呼吁以色列保持克制以避免冲突。</p><p>美国曾多次表示不想参与以色列可能做出的任何反应，并选择加强对伊斯兰政权的制裁。</p><p>随后欧盟27 国也想加强对伊朗的制裁，主要针对伊朗的武器库。</p><p>虽然此前本次欧盟首脑27国峰会原本打算完全讨论经济问题，但这些问题在很大程度上将由于国际局势严峻而被忽略。</p><p>本次欧盟首脑峰会首先关注伊朗问题和伊朗袭击以色列的后果，</p><p>从所能看到的最新结论草案显示27国呼吁各方保持最大限度的克制，并将讨论扩大已经实施的针对伊朗的制裁措施 。</p><p>欧盟从 2023 年 7 月对伊朗采取了一系列限制措施 ，主要是因为伊朗在乌克兰战争中支持俄罗斯 ，因此欧盟禁止向伊朗出口所需的生产无人机某些部件。</p><p>欧盟的想法是将这些限制扩大到其他类型的武器如导弹，这一提议得到了法国和德国的支持，而且希望将这些限制扩大到德黑兰在中东的盟友如黎巴嫩真主党。</p><p>分析指出不过目前这些制裁很可能在很大程度上仍是象征性，主要因为伊朗是逃避西方制裁的高手。</p><p>在本次为期两天的欧盟峰会期间，27 国还讨论加沙人民的处境并呼吁立即无条件停火进行人道救援。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWat.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E8%25A7%2586%25E9%25A2%2591-%25E4%25BC%258A%25E6%259C%2597%25E8%25A2%25AD%25E5%2587%25BB%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E5%2590%258E-%25E6%25AC%25A7%25E7%259B%259F%25E5%25B3%25B0%25E4%25BC%259A%25E8%25AE%25A8%25E8%25AE%25BA%25E5%25BB%25B6%25E9%2595%25BF%25E5%2588%25B6%25E8%25A3%2581%25E4%25BC%258A%25E6%259C%2597&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%A7%86%E9%A2%91%20%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E%20%E6%AC%A7%E7%9B%9F%E5%B3%B0%E4%BC%9A%E8%AE%A8%E8%AE%BA%E5%BB%B6%E9%95%BF%E5%88%B6%E8%A3%81%E4%BC%8A%E6%9C%97%20-%20https%3A%2F%2Frfi.my%2FAWat.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%A7%86%E9%A2%91%20%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E%20%E6%AC%A7%E7%9B%9F%E5%B3%B0%E4%BC%9A%E8%AE%A8%E8%AE%BA%E5%BB%B6%E9%95%BF%E5%88%B6%E8%A3%81%E4%BC%8A%E6%9C%97%20-%20https%3A%2F%2Frfi.my%2FAWat.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWat.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%A7%86%E9%A2%91%20%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E%20%E6%AC%A7%E7%9B%9F%E5%B3%B0%E4%BC%9A%E8%AE%A8%E8%AE%BA%E5%BB%B6%E9%95%BF%E5%88%B6%E8%A3%81%E4%BC%8A%E6%9C%97&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 13:45</div><img src="https://s.rfi.fr/media/display/b95f53c6-e57b-11ec-9266-005056bf30b7/w:1280/p:16x9/AFP_000_WAS2004050505268_DDay_Omaha_Beach_1944.jpg"><p><strong>俄罗斯将受邀参加6月初举行的盟军在法国诺曼底登陆80周年庆祝活动，但由于俄罗斯对乌克兰侵略战争，俄罗斯总统普京没有被邀参加仪式。        </strong></p><div><p>据这次纪念活动的组织者报告，“鉴于目前俄罗斯在乌克兰的侵略战争，普京将不会被邀请参加诺曼底登陆的纪念活动。”</p><p>该组织者称，“然而，俄罗斯将被邀请出席，以便苏联人民的承诺和牺牲，以及他们对 1945 年胜利的贡献应当得到尊重。”</p><p>诺曼底登陆纪念仪式组织者没有详细说明俄罗斯可以以何种级别的代表参加在法国西北部诺曼底举行的纪念活动。</p><p>2014 年 6 月，尽管克里米亚被俄罗斯兼并，因俄罗斯总统普京仍受邀参加当年的 70 周年庆祝活动。</p><p>随后，俄罗斯总统普京和乌克兰总统波罗申科在乌克兰东部发生亲俄叛乱军事冲突期间首次对话，西方指责莫斯科煽动甚至直接策划了这场叛乱。促进这次对话有法国总统奥朗德和德国总理默克尔的斡旋，随后上述这四个国家建立“诺曼底”形式进行谈判，以寻求乌克兰危机的解决方案。危机持续，直至2022年2月俄罗斯入侵乌克兰至今。</p><p>但普京曾经没有被邀请参加2019年“诺曼底登陆”（D-Day）75周年纪念活动，当时乌克兰东部局势已经陷入困境。</p><p>普京称不被邀请“绝对不是一个问题”。 莫斯科称不要夸大盟军登陆的重要性，坚持二战中有 2700 万苏联人死亡。</p><p>组织纪念盟军登陆活动的“解放使命”组织解释：“从历史上看，法国一直邀请当年有士兵在诺曼底登陆的国家参加这一仪式。俄罗斯联邦也被邀请过参加仪式。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWbA.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E6%25B3%2595%25E5%259B%25BD%25E5%25A4%25A7%25E5%258A%259E%25E8%25AF%25BA%25E6%259B%25BC%25E5%25BA%2595%25E7%2599%25BB%25E9%2599%258680%25E5%2591%25A8%25E5%25B9%25B4%25E5%25BA%2586%25E7%25A5%259D%25E6%25B4%25BB%25E5%258A%25A8-%25E4%25BD%2586%25E4%25B8%258D%25E9%2582%2580%25E8%25AF%25B7%25E6%2599%25AE%25E4%25BA%25AC&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%B3%95%E5%9B%BD%E5%A4%A7%E5%8A%9E%E8%AF%BA%E6%9B%BC%E5%BA%95%E7%99%BB%E9%99%8680%E5%91%A8%E5%B9%B4%E5%BA%86%E7%A5%9D%E6%B4%BB%E5%8A%A8%20%E4%BD%86%E4%B8%8D%E9%82%80%E8%AF%B7%E6%99%AE%E4%BA%AC%20-%20https%3A%2F%2Frfi.my%2FAWbA.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%B3%95%E5%9B%BD%E5%A4%A7%E5%8A%9E%E8%AF%BA%E6%9B%BC%E5%BA%95%E7%99%BB%E9%99%8680%E5%91%A8%E5%B9%B4%E5%BA%86%E7%A5%9D%E6%B4%BB%E5%8A%A8%20%E4%BD%86%E4%B8%8D%E9%82%80%E8%AF%B7%E6%99%AE%E4%BA%AC%20-%20https%3A%2F%2Frfi.my%2FAWbA.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWbA.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%B3%95%E5%9B%BD%E5%A4%A7%E5%8A%9E%E8%AF%BA%E6%9B%BC%E5%BA%95%E7%99%BB%E9%99%8680%E5%91%A8%E5%B9%B4%E5%BA%86%E7%A5%9D%E6%B4%BB%E5%8A%A8%20%E4%BD%86%E4%B8%8D%E9%82%80%E8%AF%B7%E6%99%AE%E4%BA%AC&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
