--- a/articles/rfi/999956.md
+++ b/articles/rfi/999956.md
@@ -1,5 +1,5 @@
-<!--1713350701000-->
-[美亚太助卿康达会晤中国国台办官员 学者称不太寻常](https://www.rfi.fr/cn/%E5%8F%B0%E6%B9%BE/20240417-%E7%BE%8E%E4%BA%9A%E5%A4%AA%E5%8A%A9%E5%8D%BF%E5%BA%B7%E8%BE%BE%E4%BC%9A%E6%99%A4%E4%B8%AD%E5%9B%BD%E5%9B%BD%E5%8F%B0%E5%8A%9E%E5%AE%98%E5%91%98-%E5%AD%A6%E8%80%85%E7%A7%B0%E4%B8%8D%E5%A4%AA%E5%AF%BB%E5%B8%B8)
+<!--1713356105000-->
+[中美防长刚通电话 中国军机台湾海峡跟踪美国海军巡逻机](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E5%88%9A%E9%80%9A%E7%94%B5%E8%AF%9D-%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA%E5%8F%B0%E6%B9%BE%E6%B5%B7%E5%B3%A1%E8%B7%9F%E8%B8%AA%E7%BE%8E%E5%9B%BD%E6%B5%B7%E5%86%9B%E5%B7%A1%E9%80%BB%E6%9C%BA)
 ------
 
-<div>17/04/2024 - 11:49</div><img src="https://s.rfi.fr/media/display/7e261e0e-b47b-11ee-8b2f-005056a97e36/w:1280/p:16x9/AP24012403412983.jpg"><p><strong>中国外交部对外声明表示，康达（Daniel Kritenbrink）、白宫国安会中国与台湾事务资深主任柏兰（Sarah Beran）15日于北京会晤马朝旭。国台办16日声明指出，康达、柏兰等人也会晤了仇开明，“阐明了中方关于台湾问题的原则立场”。中央社今天引述学者认为，美国外交官员会晤中共涉台官员，这不太寻常，显示台海议题讯息交流获关切。        </strong></p><div><p>美国务院亚太事务助卿康达等人在北京会晤中国外交部副部长马朝旭、国台办副主任仇开明。台湾成功大学政治学系教授王宏仁今天对中央社剖析，美国外交事务官员会晤中共涉台官员，这不太寻常，其中还有白宫国安会人员随团，显见这趟到访不仅是为了美国国务卿布林肯（Antony Blinken）访问中国铺路，台海议题也是讨论项目。</p><p>王宏仁认为，美国外交系统官员会晤中共涉台官员，这不太寻常，可以视作中美双方包括台海议题在内等各个议题沟通顺畅的表现，也有稳定台海作用；不过国台办系统在中国政府体系算偏于事务性的单位，没有左右台海议题影响力。</p><p>台湾国家政策研究基金会副研究员李正修对中央社表示，过去时任国台办主任张志军也曾赴美访问，美国没有专门部门应对两岸关系，由美国务院等官员接待实为合理；美国外交系统官员在北京会晤国台办官员，这确实较为罕见。</p><p>李正修认为，这显示美中双方对于台海议题有高度关切感，北京多次强调“台湾红线”，拉出涉台单位对话美国；美国则是期盼台海维持现状、不被破坏，相信彼此在这场会晤中充分交换了意见，也有找到共识，外交场合的会晤，台面下谈及的、接触的，往往比对外宣布的多更多。</p><p>据中央社，中国外交部会后声明表示，美中双方依两国元首旧金山会晤和近期通话达成的重要共识，就推进中美各领域对话合作、妥善管控分歧进行了坦诚、深入、建设性的沟通。而美国务院会后新闻稿表示，康达、柏兰向仇开明强调维持台海和平稳定的重要性，美国基于台湾关系法、美中三公报、六项保证的一中政策没有改变。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWZD.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%258F%25B0%25E6%25B9%25BE%2F20240417-%25E7%25BE%258E%25E4%25BA%259A%25E5%25A4%25AA%25E5%258A%25A9%25E5%258D%25BF%25E5%25BA%25B7%25E8%25BE%25BE%25E4%25BC%259A%25E6%2599%25A4%25E4%25B8%25AD%25E5%259B%25BD%25E5%259B%25BD%25E5%258F%25B0%25E5%258A%259E%25E5%25AE%2598%25E5%2591%2598-%25E5%25AD%25A6%25E8%2580%2585%25E7%25A7%25B0%25E4%25B8%258D%25E5%25A4%25AA%25E5%25AF%25BB%25E5%25B8%25B8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E4%BA%9A%E5%A4%AA%E5%8A%A9%E5%8D%BF%E5%BA%B7%E8%BE%BE%E4%BC%9A%E6%99%A4%E4%B8%AD%E5%9B%BD%E5%9B%BD%E5%8F%B0%E5%8A%9E%E5%AE%98%E5%91%98%20%E5%AD%A6%E8%80%85%E7%A7%B0%E4%B8%8D%E5%A4%AA%E5%AF%BB%E5%B8%B8%20-%20https%3A%2F%2Frfi.my%2FAWZD.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E4%BA%9A%E5%A4%AA%E5%8A%A9%E5%8D%BF%E5%BA%B7%E8%BE%BE%E4%BC%9A%E6%99%A4%E4%B8%AD%E5%9B%BD%E5%9B%BD%E5%8F%B0%E5%8A%9E%E5%AE%98%E5%91%98%20%E5%AD%A6%E8%80%85%E7%A7%B0%E4%B8%8D%E5%A4%AA%E5%AF%BB%E5%B8%B8%20-%20https%3A%2F%2Frfi.my%2FAWZD.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWZD.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E4%BA%9A%E5%A4%AA%E5%8A%A9%E5%8D%BF%E5%BA%B7%E8%BE%BE%E4%BC%9A%E6%99%A4%E4%B8%AD%E5%9B%BD%E5%9B%BD%E5%8F%B0%E5%8A%9E%E5%AE%98%E5%91%98%20%E5%AD%A6%E8%80%85%E7%A7%B0%E4%B8%8D%E5%A4%AA%E5%AF%BB%E5%B8%B8&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 11:05</div><img src="https://s.rfi.fr/media/display/9dceba52-b9fe-11ea-a7ad-005056bf87d6/w:1280/p:16x9/roblin_poseidon.jpg"><p><strong>中国军方周三报告，派出战斗机对飞越敏感台湾海峡的美国海军巡逻机进行监视和警告。中国军方谴责美国此次在台湾海峡的飞行是“公开炒作”。美国军方称，“美国根据国际法在台湾海峡开展行动，维护了所有国家的航行权利和自由。”路透社说，此事件发生在中美国防部长互通电话几小时后。        </strong></p><div><p>中国派出战斗机在台湾海峡跟踪美国海军飞机。中国军方报告派出战斗机对飞越敏感台湾海峡的美国海军巡逻机进行监视和警告。</p><p>路透社的报道称，中国声称对民主治理的台湾拥有主权，并表示对该海峡拥有管辖权。台湾和美国对此存在争议，称台湾海峡是国际水道。</p><p>据美国海军第七舰队报告，P-8A海神海上巡逻侦察机也用于反潜任务，在国际空域飞越了台湾海峡。</p><p>美国在一份声明中表示：“美国根据国际法在台湾海峡开展行动，维护所有国家的航行权利和自由。” 并说，“这架飞机飞越台湾海峡表明了美国对自由开放的印太地区的承诺。”</p><p>中国军方称此次飞行是“公开炒作”，并公告说已派出战机对美机进行监视和警告，并且“依法依规予以处理”。</p><p>解放军东部战区在声明中表示，战区部队始终保持高度戒备，坚决捍卫国家主权安全和地区和平稳定。</p><p>根据台湾国防部消息，美军飞机经海峡向南飞行，台军已监测情况，但未发现任何异常。</p><p>上次美国海军宣布飞越台湾海峡是在去年12月，中国军方表示也派出了战斗机对飞机进行监视和警告。</p><p>最新的飞越任务是在美国国防部长奥斯汀与中国国防部长董军通话后不久进行的，两国防长通话是两国寻求恢复军事关系一年多来的首次接触。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWYa.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E4%25B8%25AD%25E7%25BE%258E%25E9%2598%25B2%25E9%2595%25BF%25E5%2588%259A%25E9%2580%259A%25E7%2594%25B5%25E8%25AF%259D-%25E4%25B8%25AD%25E5%259B%25BD%25E5%2586%259B%25E6%259C%25BA%25E5%258F%25B0%25E6%25B9%25BE%25E6%25B5%25B7%25E5%25B3%25A1%25E8%25B7%259F%25E8%25B8%25AA%25E7%25BE%258E%25E5%259B%25BD%25E6%25B5%25B7%25E5%2586%259B%25E5%25B7%25A1%25E9%2580%25BB%25E6%259C%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E5%88%9A%E9%80%9A%E7%94%B5%E8%AF%9D%20%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA%E5%8F%B0%E6%B9%BE%E6%B5%B7%E5%B3%A1%E8%B7%9F%E8%B8%AA%E7%BE%8E%E5%9B%BD%E6%B5%B7%E5%86%9B%E5%B7%A1%E9%80%BB%E6%9C%BA%20-%20https%3A%2F%2Frfi.my%2FAWYa.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E5%88%9A%E9%80%9A%E7%94%B5%E8%AF%9D%20%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA%E5%8F%B0%E6%B9%BE%E6%B5%B7%E5%B3%A1%E8%B7%9F%E8%B8%AA%E7%BE%8E%E5%9B%BD%E6%B5%B7%E5%86%9B%E5%B7%A1%E9%80%BB%E6%9C%BA%20-%20https%3A%2F%2Frfi.my%2FAWYa.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWYa.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E7%BE%8E%E9%98%B2%E9%95%BF%E5%88%9A%E9%80%9A%E7%94%B5%E8%AF%9D%20%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA%E5%8F%B0%E6%B9%BE%E6%B5%B7%E5%B3%A1%E8%B7%9F%E8%B8%AA%E7%BE%8E%E5%9B%BD%E6%B5%B7%E5%86%9B%E5%B7%A1%E9%80%BB%E6%9C%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
