--- a/articles/rfi/999964.md
+++ b/articles/rfi/999964.md
@@ -1,5 +1,5 @@
-<!--1713305701000-->
-[泽连斯基：中国可以“加速”乌克兰的和平](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240416-%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA-%E4%B8%AD%E5%9B%BD%E5%8F%AF%E4%BB%A5-%E5%8A%A0%E9%80%9F-%E4%B9%8C%E5%85%8B%E5%85%B0%E7%9A%84%E5%92%8C%E5%B9%B3)
+<!--1713345302000-->
+[澳大利亚发表首个「国家防卫战略」强调中国威胁 北京反驳](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240417-%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E5%8F%91%E8%A1%A8%E9%A6%96%E4%B8%AA-%E5%9B%BD%E5%AE%B6%E9%98%B2%E5%8D%AB%E6%88%98%E7%95%A5-%E5%BC%BA%E8%B0%83%E4%B8%AD%E5%9B%BD%E5%A8%81%E8%83%81-%E5%8C%97%E4%BA%AC%E5%8F%8D%E9%A9%B3)
 ------
 
-<div>16/04/2024 - 22:44</div><img src="https://s.rfi.fr/media/display/c84317f6-f596-11ee-9027-005056a97e36/w:1280/p:16x9/000_347P9YA.jpg"><p><strong></strong></p><div><p>泽连斯基还强调说，首要任务是“恢复对《联合国宪章》目标和原则的充分尊重，包括对领土完整原则的尊重”。 一种排除为了莫斯科的利益而放弃乌克兰领土的方式。</p><p>瑞士准备在6月中旬为乌克兰主办一场高级别的和平会议。中国国家主席习近平表示，中方鼓励和支持一切有利于和平解决危机的努力，支持适时召开俄乌双方认可、各方平等参与、对所有和平方案进行公平讨论的国际和会，愿就此同包括德国在内的有关各方保持密切沟通。</p><p>德国总理朔尔茨与习近平讨论如何为乌克兰公正和平做出更多贡献。朔尔茨表示，期望讨论双方如何为乌克兰的公正和平做出更多贡献。</p><p>他又说，俄罗斯对乌克兰的侵略和俄罗斯的军备，对欧洲安全产生非常重大的负面影响，直接影响欧洲的核心利益，也损害整个国际秩序。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWUF.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240416-%25E6%25B3%25BD%25E8%25BF%259E%25E6%2596%25AF%25E5%259F%25BA-%25E4%25B8%25AD%25E5%259B%25BD%25E5%258F%25AF%25E4%25BB%25A5-%25E5%258A%25A0%25E9%2580%259F-%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E7%259A%2584%25E5%2592%258C%25E5%25B9%25B3&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%8F%AF%E4%BB%A5%E2%80%9C%E5%8A%A0%E9%80%9F%E2%80%9D%E4%B9%8C%E5%85%8B%E5%85%B0%E7%9A%84%E5%92%8C%E5%B9%B3%20-%20https%3A%2F%2Frfi.my%2FAWUF.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%8F%AF%E4%BB%A5%E2%80%9C%E5%8A%A0%E9%80%9F%E2%80%9D%E4%B9%8C%E5%85%8B%E5%85%B0%E7%9A%84%E5%92%8C%E5%B9%B3%20-%20https%3A%2F%2Frfi.my%2FAWUF.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWUF.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%8F%AF%E4%BB%A5%E2%80%9C%E5%8A%A0%E9%80%9F%E2%80%9D%E4%B9%8C%E5%85%8B%E5%85%B0%E7%9A%84%E5%92%8C%E5%B9%B3&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>17/04/2024 - 10:27</div><img src="https://s.rfi.fr/media/display/95825426-47e1-11ed-a455-005056a9a7b9/w:1280/p:16x9/drapeau%20Australie.jpg"><p><strong>澳大利亚今天发布了该国首个国防战略，该战略重点关注太平洋地区，称以应对中国的“胁迫策略”和日益增长的地区冲突风险。中国对此表达不高兴，称中国不是一个威胁，并说也不威胁任何人。        </strong></p><div><p>澳大利亚今天公布首份「国家防卫战略」（National Defence Strategy），显示面对中国“胁迫手段”和太平洋地区冲突风险日增，澳大利亚将进一步聚焦在亚太地区。</p><p>澳大利亚国防部长马勒斯（Richard Marles）透露对区域安全和战争风险的严峻评估，他说，“冷战结束后指引国防规划的乐观假设早已不复存在，” 并警告“中国为实现战略目标而采取了胁迫手段，澳洲不再有10年的冲突战略预警期”。</p><p>马勒斯表示，往后不会将重点放在一支几乎能在世界各地执行各式任务的平衡部队，而是聚焦于保护澳大利亚在亚太地区的利益。</p><p>马勒斯说“我们是海上贸易岛国”，还说“澳大利亚必须能够防止敌人扼杀贸易或阻止进入重要航道，”“入侵澳大利亚的情况无论如何都不太可能发生，正是因为对手毋须踏上澳大利亚国土就可对澳大利亚造成很多的损害”。</p><p>该战略核心是发展一支匿踪核动力潜舰舰队、将关键导弹能力提高两倍，并发展一支大型水面作战舰队。马勒斯说：“拥有我国史上最有能力的海军将是我方投射能力和拒止战略的核心。”</p><p>马勒斯还说，澳大利亚必须能够防止敌人封锁重要航道。</p><p>据法新社今天报道称，中国官方对澳大利亚的国家防卫战略针对中国胁迫威胁，并将中国描述为重要威胁表达不满。中国说，中国不是威胁，也不会威胁任何国家。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWY4.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240417-%25E6%25BE%25B3%25E5%25A4%25A7%25E5%2588%25A9%25E4%25BA%259A%25E5%258F%2591%25E8%25A1%25A8%25E9%25A6%2596%25E4%25B8%25AA-%25E5%259B%25BD%25E5%25AE%25B6%25E9%2598%25B2%25E5%258D%25AB%25E6%2588%2598%25E7%2595%25A5-%25E5%25BC%25BA%25E8%25B0%2583%25E4%25B8%25AD%25E5%259B%25BD%25E5%25A8%2581%25E8%2583%2581-%25E5%258C%2597%25E4%25BA%25AC%25E5%258F%258D%25E9%25A9%25B3&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E5%8F%91%E8%A1%A8%E9%A6%96%E4%B8%AA%E3%80%8C%E5%9B%BD%E5%AE%B6%E9%98%B2%E5%8D%AB%E6%88%98%E7%95%A5%E3%80%8D%E5%BC%BA%E8%B0%83%E4%B8%AD%E5%9B%BD%E5%A8%81%E8%83%81%20%E5%8C%97%E4%BA%AC%E5%8F%8D%E9%A9%B3%20-%20https%3A%2F%2Frfi.my%2FAWY4.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E5%8F%91%E8%A1%A8%E9%A6%96%E4%B8%AA%E3%80%8C%E5%9B%BD%E5%AE%B6%E9%98%B2%E5%8D%AB%E6%88%98%E7%95%A5%E3%80%8D%E5%BC%BA%E8%B0%83%E4%B8%AD%E5%9B%BD%E5%A8%81%E8%83%81%20%E5%8C%97%E4%BA%AC%E5%8F%8D%E9%A9%B3%20-%20https%3A%2F%2Frfi.my%2FAWY4.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWY4.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E5%8F%91%E8%A1%A8%E9%A6%96%E4%B8%AA%E3%80%8C%E5%9B%BD%E5%AE%B6%E9%98%B2%E5%8D%AB%E6%88%98%E7%95%A5%E3%80%8D%E5%BC%BA%E8%B0%83%E4%B8%AD%E5%9B%BD%E5%A8%81%E8%83%81%20%E5%8C%97%E4%BA%AC%E5%8F%8D%E9%A9%B3&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
