--- a/articles/rfi/999966.md
+++ b/articles/rfi/999966.md
@@ -1,5 +1,5 @@
-<!--1713303902000-->
-[中国奇瑞将签署在巴塞罗那生产协议](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240416-%E4%B8%AD%E5%9B%BD%E5%A5%87%E7%91%9E%E5%B0%86%E7%AD%BE%E7%BD%B2%E5%9C%A8%E5%B7%B4%E5%A1%9E%E7%BD%97%E9%82%A3%E7%94%9F%E4%BA%A7%E5%8D%8F%E8%AE%AE)
+<!--1713318302000-->
+[舒尔茨访华：未来可能是人人为己，唯一的赢家将是习近平 - 法国世界报](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E4%B8%96%E7%95%8C%E6%8A%A5/20240416-%E8%88%92%E5%B0%94%E8%8C%A8%E8%AE%BF%E5%8D%8E-%E6%9C%AA%E6%9D%A5%E5%8F%AF%E8%83%BD%E6%98%AF%E4%BA%BA%E4%BA%BA%E4%B8%BA%E5%B7%B1%EF%BC%8C%E5%94%AF%E4%B8%80%E7%9A%84%E8%B5%A2%E5%AE%B6%E5%8F%AF%E8%83%BD%E6%98%AF%E4%B9%A0%E8%BF%91%E5%B9%B3)
 ------
 
-<div>16/04/2024 - 22:35</div><img src="https://s.rfi.fr/media/display/d798ca48-fc30-11ee-881c-005056bf30b7/w:1280/p:16x9/Logo-Chery.png"><p><strong></strong></p><div><p>西班牙工业部在一份声明中表示，“两家公司达成了一项“协议”，将在位于巴塞罗那前日产工厂生产汽车”。</p><p>现阶段尚未透露该协议的细节，该协议将于周三在马德里举行的会议上签署，会议期间工业部长乔迪·俄瑞武（Jordi Hereu）和奇瑞代表团将在加泰罗尼亚地区政府成员出席的情况下签署。</p><p>加泰罗尼亚议会议长托伦德(Roger Torrent)高兴地说，“经过几个月的谈判，我们最终实现了前日产工厂的再工业化”，“埃布罗和奇瑞之间达成了生产数千辆汽车的协议”。因此前有消息说，中国奇瑞有意在意大利设分厂。</p><p>至于选址，奇瑞很可能会重启原先日产在巴塞罗那的工厂，恢复当地约1600个工作岗位。该工厂曾因产量减少于2021年停产关闭。</p><p>拥有 3,000 名员工的前日产工厂于 2021 年 12 月关闭。这个庞大工业综合体的一部分被出售给摩托车制造商 Silence 和 EV Motors，但地方当局与 EV Motors 一直在寻找另一家投资者完全重新启动该网站。</p><p>奇瑞是继电动汽车冠军比亚迪之后第二家宣布在欧洲设立工厂的中国制造商，比亚迪于二月份正式在匈牙利建设其第一家欧洲工厂。 后者将在三年内投入运营。</p><p>奇瑞成立于1997年，是一家国有企业。 该品牌声称到 2023 年将售出 188 万辆乘用车，大约 15 年前在中国非常受欢迎，尤其是针对当地市场的省油型城市汽车。</p><p>法新社表示，中国奇瑞做出这样的决定是不容易的。2023年下半年以来，欧美接连宣布对中国电动汽车发起调查措施。当年9月，欧盟宣布对中国电动汽车启动反补贴调查。2024年3月6日，欧盟发布公报称，“已掌握足够证据，表明出口到欧盟的中国电动汽车正在接受补贴”。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWUA.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240416-%25E4%25B8%25AD%25E5%259B%25BD%25E5%25A5%2587%25E7%2591%259E%25E5%25B0%2586%25E7%25AD%25BE%25E7%25BD%25B2%25E5%259C%25A8%25E5%25B7%25B4%25E5%25A1%259E%25E7%25BD%2597%25E9%2582%25A3%25E7%2594%259F%25E4%25BA%25A7%25E5%258D%258F%25E8%25AE%25AE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E5%9B%BD%E5%A5%87%E7%91%9E%E5%B0%86%E7%AD%BE%E7%BD%B2%E5%9C%A8%E5%B7%B4%E5%A1%9E%E7%BD%97%E9%82%A3%E7%94%9F%E4%BA%A7%E5%8D%8F%E8%AE%AE%20-%20https%3A%2F%2Frfi.my%2FAWUA.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E5%9B%BD%E5%A5%87%E7%91%9E%E5%B0%86%E7%AD%BE%E7%BD%B2%E5%9C%A8%E5%B7%B4%E5%A1%9E%E7%BD%97%E9%82%A3%E7%94%9F%E4%BA%A7%E5%8D%8F%E8%AE%AE%20-%20https%3A%2F%2Frfi.my%2FAWUA.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWUA.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E5%9B%BD%E5%A5%87%E7%91%9E%E5%B0%86%E7%AD%BE%E7%BD%B2%E5%9C%A8%E5%B7%B4%E5%A1%9E%E7%BD%97%E9%82%A3%E7%94%9F%E4%BA%A7%E5%8D%8F%E8%AE%AE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 01:10</div><img src="https://s.rfi.fr/media/display/bddd2032-0bde-11ea-9862-005056bff430/w:1280/p:16x9/fa_guo_shi_jie_bao_wb161923-rfi-cn-20150123_cartouche.jpg"><p><strong>法国世界报周二就德国总理舒尔茨对中国的访问发表了社论。在法国和德国关系疏远的背景下，法国世界报担心未来会出现人人为己的局面。法国世界报周二在社论中表示，德国总理在中国呼吁“公开和公平”的竞争，似乎，德国总理是忽视了北京只认力量较量的这个事实。如果欧洲人不团结起来作为一个整体来行动的话，就会面临被削弱的风险。                    </strong></p><div><p>法国世界报指出，2022年2月27日，即俄罗斯入侵乌克兰后三天，德国总理在德国联邦议会的讲台上庄严地宣布，“时代变了”(Zeitenwende)。</p><p>德国被迫承认多年来自己一直把赌注押在普京的理性上，把赌注押在依靠俄罗斯天然气的供应来维持德国工业的运转上，从而误入了歧途。</p><p>法国世界报表示，德国总理所说的“时代变了”不仅只涉及德国和俄国的关系。它还涉及到，在只知道弱肉强食的政权面前要捍卫民主和法治。</p><p>“时代变了”标志着“通过贸易来改变”（Wandel durch Handel）这一理论的终结。“通过贸易来改变”是德国的一个政治理论，根据该理论，通过与西方民主国家进行贸易，独裁政权必然会实现自由化。从这个意义上说，德国总理所说的时代变了，也事关中国。</p><p>然而，德国总理舒尔茨于4月14日星期日至4月16日星期二率领大型经济代表团访华显示了：当涉及与中国的关系时，舒尔茨这位德国社民党人对自己的定位与前总理默克尔是一致的，而不是与默克尔决裂。</p><p>法国世界报还指出，2023年3月，欧盟委员会主席冯德莱恩坚称需要“降低对中国的风险”，但尽管如此，许多德国企业家尤其是最大的德国企业家仍然认为，恰恰相反，主要的风险是没有足够地把赌押在雄心勃勃地要成为世界老大的全球第二大经济体中国的身上。目前在华经营的德国企业不少于5000家。</p><p><strong>“公开、公平”的竞争</strong></p><p>舒尔茨的环保部长贝尔博克（Annalena Baerbock）称习近平是“独裁者”，德国商界在“去风险”问题上存在分歧，而舒尔茨自己的政党社民党似乎相信中国可以影响俄罗斯在乌克兰问题上的立场。因此，舒尔茨在走钢丝。然而，舒尔茨呼吁中国进行“公开和公平”的竞争，似乎，德国总理忽视了北京是只认力量较量的这个事实。尽管中国的内需依然低迷，但习近平远没有做出丝毫的妥协，习近平是比以往任何时候都更加指望受到大量补贴的中国工业来征服新市场以确保中国经济有令人满意的增长。</p><p>身为中国共产党总书记的习近平事实上是一位保守派，他只信奉供给政策，他坚信，支持内需会让中国人懒惰，从而导致中国的衰落。舒尔茨是无法改变这种心态的。他应该更多地考虑众多欧洲国家对北京所持的保留意见，并从他自己做出的“时代变了”的总结中得出结论。</p><p>法国世界报的社论最后写道，2019年3月，习近平来到巴黎时，不仅受到马克龙的接见，还受到默克尔和时任欧盟委员会主席容克的接见。2024年春天，在中国国家主席准备对法国进行国事访问之前三周，德国总理访问中国。未来可能是人人为己，唯一的赢家可能是习近平。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E9%98%BF%E6%9B%BC%E4%BA%AD/" title="阿曼亭">阿曼亭</a></div></div></div></div>
