--- a/articles/rfi/999970.md
+++ b/articles/rfi/999970.md
@@ -1,5 +1,5 @@
-<!--1713300302000-->
-[美国众议院本周或就援助乌克兰以色列及台湾等法案进行独立投票？](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240416-%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E6%9C%AC%E5%91%A8%E6%88%96%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%B9%8C%E5%85%8B%E5%85%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%8F%8A%E5%8F%B0%E6%B9%BE%E7%AD%89%E6%B3%95%E6%A1%88%E8%BF%9B%E8%A1%8C%E7%8B%AC%E7%AB%8B%E6%8A%95%E7%A5%A8)
+<!--1713305701000-->
+[泽连斯基：中国可以“加速”乌克兰的和平](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240416-%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA-%E4%B8%AD%E5%9B%BD%E5%8F%AF%E4%BB%A5-%E5%8A%A0%E9%80%9F-%E4%B9%8C%E5%85%8B%E5%85%B0%E7%9A%84%E5%92%8C%E5%B9%B3)
 ------
 
-<div>16/04/2024 - 22:27</div><img src="https://s.rfi.fr/media/display/f307a8a0-fc2e-11ee-bd36-005056bf30b7/w:1280/p:16x9/%E4%BC%97%E8%AE%AE%E9%99%A2%E8%AE%AE%E9%95%BF%E8%BF%88%E5%85%8B%E2%80%A7%E7%BA%A6%E7%BF%B0%E9%80%8A%EF%BC%88Mike%20Johnson%EF%BC%89.jpg"><p><strong>美国众议院议长约翰逊4月15日表示，本周将就援助乌克兰、以色列及台湾等法案进行独立投票，以推进多项立法。        </strong></p><div><p>数月以来，美国在欧洲的盟友和乌克兰领导人一直敦促美国国会授权向基辅提供更多援助，并警告说，如果没有美国的额外支持，乌克兰军队可能会在与俄罗斯军队的战斗中失去更多阵地。</p><p>周一晚间，美国国会众议长迈克‧约翰逊（Mike Johnson）在与众议院共和党议员会面时，提出了对四项独立法案进行投票的建议，其中包括为台湾提供资金、对伊朗实施更多制裁，以及允许乌克兰兑现被扣押的俄罗斯资产的法案。</p><p>约翰逊在会后说：“我们在世界各地都有像普京、习近平和伊朗这样的恐怖分子、暴君和可怕的领导人，他们都在关注美国是否会为其盟友和我们自己在全球的利益挺身而出，我们会的。”</p><p>“我们将就对以色列的援助、对乌克兰的援助、对印度-太平洋地区的援助进行投票。然后是另一项包含国家安全优先事项的措施，其中包括……对伊朗的其它制裁以及我们在此讨论已久的其它措施。”“这是一个优先事项，我确实希望本周内能完成这项工作。”</p><p>约翰逊承认说：“乌克兰问题显然是共和党方面争议最大的问题”，“我认为美国人民应该得到解释，为什么在这里提供援助符合美国人的利益。”</p><p>该方案将偏离参议院在今年2月通过的950亿美元援助方案，是否能在美国参众两院获得通过仍未可知。但约翰逊表示，将与众议院民主党领袖哈基姆‧杰弗里斯（Hakeem Jeffries）进行讨论，以争取支持。</p><p>他说：“我们将遵守72小时规则。这可能意味着，如果我们明天（4月16日）早些时候得到法案文本，那就可能是周五晚上（表决）了。”</p><p>这表明，在伊朗对美国在中东最亲密的盟友以色列发动袭击两天后，约翰逊正在采取行动，包括向乌克兰、以色列和台湾提供更多军事援助。</p><p>上周五（4月12日），约翰逊曾经前往海湖庄园（Mar-a-Lago）与前总统特朗普会晤。特朗普随后告诉媒体，他正在“研究”乌克兰援助法案。但直到本周一，特朗普尚未对约翰逊的最新提议发表评论。</p><p>美国众议员玛乔丽‧泰勒‧格林（Marjorie Taylor Greene）直言不讳地反对援助乌克兰，并威胁要把约翰逊赶下议长宝座。周一，约翰逊撇开了格林会因为他的最新提议而将他赶下台的说法。他说：“我不会把时间花在担心撤换动议上。”</p><p>周一晚间，白宫也没有立即对约翰逊的提议做出回应。周一早些时候，美国总统拜登在欢迎捷克总理彼得‧菲亚拉（Petr Fiala）访问华盛顿的讲话中呼吁国会就补充援助法案采取行动。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWU5.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240416-%25E7%25BE%258E%25E5%259B%25BD%25E4%25BC%2597%25E8%25AE%25AE%25E9%2599%25A2%25E6%259C%25AC%25E5%2591%25A8%25E6%2588%2596%25E5%25B0%25B1%25E6%258F%25B4%25E5%258A%25A9%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E5%258F%258A%25E5%258F%25B0%25E6%25B9%25BE%25E7%25AD%2589%25E6%25B3%2595%25E6%25A1%2588%25E8%25BF%259B%25E8%25A1%258C%25E7%258B%25AC%25E7%25AB%258B%25E6%258A%2595%25E7%25A5%25A8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E6%9C%AC%E5%91%A8%E6%88%96%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%B9%8C%E5%85%8B%E5%85%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%8F%8A%E5%8F%B0%E6%B9%BE%E7%AD%89%E6%B3%95%E6%A1%88%E8%BF%9B%E8%A1%8C%E7%8B%AC%E7%AB%8B%E6%8A%95%E7%A5%A8%EF%BC%9F%20-%20https%3A%2F%2Frfi.my%2FAWU5.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E6%9C%AC%E5%91%A8%E6%88%96%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%B9%8C%E5%85%8B%E5%85%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%8F%8A%E5%8F%B0%E6%B9%BE%E7%AD%89%E6%B3%95%E6%A1%88%E8%BF%9B%E8%A1%8C%E7%8B%AC%E7%AB%8B%E6%8A%95%E7%A5%A8%EF%BC%9F%20-%20https%3A%2F%2Frfi.my%2FAWU5.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWU5.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E6%9C%AC%E5%91%A8%E6%88%96%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%B9%8C%E5%85%8B%E5%85%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%8F%8A%E5%8F%B0%E6%B9%BE%E7%AD%89%E6%B3%95%E6%A1%88%E8%BF%9B%E8%A1%8C%E7%8B%AC%E7%AB%8B%E6%8A%95%E7%A5%A8%EF%BC%9F&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 22:44</div><img src="https://s.rfi.fr/media/display/c84317f6-f596-11ee-9027-005056a97e36/w:1280/p:16x9/000_347P9YA.jpg"><p><strong></strong></p><div><p>泽连斯基还强调说，首要任务是“恢复对《联合国宪章》目标和原则的充分尊重，包括对领土完整原则的尊重”。 一种排除为了莫斯科的利益而放弃乌克兰领土的方式。</p><p>瑞士准备在6月中旬为乌克兰主办一场高级别的和平会议。中国国家主席习近平表示，中方鼓励和支持一切有利于和平解决危机的努力，支持适时召开俄乌双方认可、各方平等参与、对所有和平方案进行公平讨论的国际和会，愿就此同包括德国在内的有关各方保持密切沟通。</p><p>德国总理朔尔茨与习近平讨论如何为乌克兰公正和平做出更多贡献。朔尔茨表示，期望讨论双方如何为乌克兰的公正和平做出更多贡献。</p><p>他又说，俄罗斯对乌克兰的侵略和俄罗斯的军备，对欧洲安全产生非常重大的负面影响，直接影响欧洲的核心利益，也损害整个国际秩序。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWUF.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240416-%25E6%25B3%25BD%25E8%25BF%259E%25E6%2596%25AF%25E5%259F%25BA-%25E4%25B8%25AD%25E5%259B%25BD%25E5%258F%25AF%25E4%25BB%25A5-%25E5%258A%25A0%25E9%2580%259F-%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E7%259A%2584%25E5%2592%258C%25E5%25B9%25B3&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%8F%AF%E4%BB%A5%E2%80%9C%E5%8A%A0%E9%80%9F%E2%80%9D%E4%B9%8C%E5%85%8B%E5%85%B0%E7%9A%84%E5%92%8C%E5%B9%B3%20-%20https%3A%2F%2Frfi.my%2FAWUF.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%8F%AF%E4%BB%A5%E2%80%9C%E5%8A%A0%E9%80%9F%E2%80%9D%E4%B9%8C%E5%85%8B%E5%85%B0%E7%9A%84%E5%92%8C%E5%B9%B3%20-%20https%3A%2F%2Frfi.my%2FAWUF.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWUF.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%8F%AF%E4%BB%A5%E2%80%9C%E5%8A%A0%E9%80%9F%E2%80%9D%E4%B9%8C%E5%85%8B%E5%85%B0%E7%9A%84%E5%92%8C%E5%B9%B3&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
