--- a/articles/rfi/999971.md
+++ b/articles/rfi/999971.md
@@ -1,5 +1,5 @@
-<!--1713300302000-->
-[戴琪：拜登政府正&quot;认真审视&quot;各种贸易防御工具以应对中国经济威胁 - 要闻分析](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E5%88%86%E6%9E%90/20240416-%E6%88%B4%E7%90%AA-%E6%8B%9C%E7%99%BB%E6%94%BF%E5%BA%9C%E6%AD%A3-%E8%AE%A4%E7%9C%9F%E5%AE%A1%E8%A7%86-%E5%90%84%E7%A7%8D%E8%B4%B8%E6%98%93%E9%98%B2%E5%BE%A1%E5%B7%A5%E5%85%B7%E4%BB%A5%E5%BA%94%E5%AF%B9%E4%B8%AD%E5%9B%BD%E7%BB%8F%E6%B5%8E%E5%A8%81%E8%83%81)
+<!--1713303902000-->
+[耶伦：华盛顿准备加强对伊朗的制裁](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240416-%E8%80%B6%E4%BC%A6-%E5%8D%8E%E7%9B%9B%E9%A1%BF%E5%87%86%E5%A4%87%E5%8A%A0%E5%BC%BA%E5%AF%B9%E4%BC%8A%E6%9C%97%E7%9A%84%E5%88%B6%E8%A3%81)
 ------
 
-<div>16/04/2024 - 21:08</div><img src="https://s.rfi.fr/media/display/1ffbec94-a1b4-11ed-b3c1-005056a90284/w:1280/p:16x9/2023-01-31T171740Z_1417667005_RC2UZX9T8WZU_RTRMADP_3_USA-TRADE-CHINA-TECH.JPG"><p><strong>美国贸易代表戴琪（Katherine Tai）将于周二在国会听证会上作证从而告诉美国国会：拜登政府正在"认真审视"美国的各种贸易防御工具，以应对中国贸易和经济政策所构成的威胁。                    </strong></p><div><p>据路透社4月16日发自华盛顿的消息，戴琪在提前提供的书面证词摘要中指出，中国的政策导致“多个行业出现依赖性和脆弱性，伤害了美国工人和商家，并给我们的供应链制造了真正的风险”。拜登政府为应对中国贸易和经济政策所构成的威胁，正在“认真考虑”美国的各种贸易防御工具，包括重新检讨特朗普时代对中国进口商品课征的关税。</p><p>路透社引述戴琪的话说，“这也是为什么我们正在认真考虑我们现有的工具如何应对这一问题，包括通过对中国相关301条款关税历时四年的检讨。”</p><p>戴琪在书面证词中表示，她正在认真审阅一份由五家美国工会提出的调查申请，该申请要求对中国海上后勤以及造船业中被指控的不公平行为、政策和作法进行新的301条款调查。</p><p>戴琪在证词摘要中还表示，“我们与中华人民共和国的经济关系是复杂的。正如总统所说，我们希望与中国竞争而不是冲突。” 拜登政府在供应链方面工作的主要目的，就是要减少对中国的依赖，让供应来源多元化，以避免像新冠疫情末期出现的瓶颈。</p><p>一周前，美国财政部长耶伦在访华期间已向中国领导人发出警告：由于中国对电动车、太阳能板和其他清洁能源物资的过分投资导致的产能过剩，形成了一波不可接受的出口浪潮的威胁，伤害了美国及其他地方的制造商。</p><p>耶伦周二也将在美国财政部与中国官员就“平衡成长”展开新的对话。路透社引述中国贸易专家的话说，耶伦对北京有关产能过剩的警告可能只是第一步，后续可能会启动新一轮“301条款”不公平贸易行为的调查，从而导致对电动车、太阳能板和其他进口产品加征新的关税。</p><p><strong>2024年度《对外贸易壁垒国家贸易评估报告》</strong></p><p>在不久前的3月29日，美国贸易代表戴琪曾发布2024年度《对外贸易壁垒国家贸易评估报告》（National Trade Estimate Report on Foreign Trade Barriers），其中特别提到了中国在农产品、非市场政策和做法以及助长政府侵犯权利的数据政策方面的壁垒。该报告自1985年以来每年发布一次，全面审查美国商品和服务出口、对外直接投资以及电子商务在主要出口市场面临的重大外国壁垒。</p><p>本年度的报告指出，在农产品方面，中华人民共和国在一系列农产品和食品上存在不透明且繁琐的设施注册要求，作为受高致病性禽流感影响的地区之一，其家禽产品贸易没有遵守基于科学和风险的标准和承诺。</p><p>报告还表示，中国国家主导的非市场经济和贸易方式继续影响着中国奉行的产业政策，并为中国企业提供不公平的竞争优势。这包括大规模的财政支持、监管和其他优惠以及旨在使外国竞争对手处于不利地位的正式和非正式政策和做法。美国贸易代表办公室指出，这种行为严重扭曲和扰乱市场，导致严重且持续的产能过剩，钢铁、铝和太阳能等行业当前的情况就证明了这一点。</p><p>报告还列出了中华人民共和国和俄罗斯等一系列国家存在的有问题的数据政策。报告说，数据政策被利用来推进国家的侵入行为，例如，这些政府可以利用数据本地化政策来监视其人民、干涉劳工权利以及以其他方式损害公民和政治自由。在某些情况下，这些数据政策也缺乏明确性并存在合规问题。</p><p><strong>拉美去年从中国进口钢材年增44% 达创纪录的1000万吨</strong></p><p>此外，最新公布的拉丁美洲钢铁协会（Latin American Steel Association）数据显示：去年拉美地区国家从中国进口的钢材达到创纪录的1000万吨，年增44%。20年前，这个数字只有8.5万吨。</p><p>在拉丁美洲，约有140万人从事钢铁业，但他们的生计日益受到威胁，因为中国钢铁的价格比本土生产的价格低了40%。拉丁美洲钢铁协会主管瓦格纳（Alejandro Wagner）告诉法新社：中国在拉丁美洲的影响力太大了。没有人反对国家之间的贸易，但必须是公平贸易。</p><p>随着廉价的中国钢铁涌入拉丁美洲，威胁到与该行业相关的数以十万计就业机会，拉美金属工人呼吁提高进口关税，比如智利和巴西等国家。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E8%82%96%E6%9B%BC/" title="肖曼">肖曼</a></div></div></div></div>
+<div>16/04/2024 - 22:42</div><img src="https://s.rfi.fr/media/display/9fb38c92-fc05-11ee-81f3-005056bf30b7/w:1280/p:16x9/2024-04-03T094420Z_334683959_RC26D0A5LJVP_RTRMADP_3_ZAMBIA-DEBT.JPG"><p><strong></strong></p><div><p>她强调“伊朗的行为威胁到该地区的稳定，并可能产生严重经济后果”。</p><p>根据演讲稿的内容，耶伦会表示，自 2021 年 1 月拜登入主白宫以来，美国财政部已“针对与恐怖主义和伊朗政权资助恐怖主义有关的 500 多名个人和实体”以及该地区与之相关的各种运动。 这是特别针对“伊朗的无人机和导弹计划及其对哈马斯、胡塞武装、真主党和伊拉克民兵的资助”。</p><p>耶伦女士将坚持这样一个事实：对哈马斯实施的制裁绝不能阻止向加沙居民提供援助； 财政部一直在努力“确保制裁不会阻碍重要的援助”。</p><p>“在加沙，超过 200 面临严重的粮食不安全，大多数人已经流离失所。 我们所有参加这些会议的人都有责任尽我们所能来结束这种痛苦。”</p><p>国际货币基金组织和世界银行的春季会议将持续一个星期。今年的会议仍将充满怀旧气氛，因为 2024是 国际货币基金和世界银行成立80周年。</p><p>两个机构诞生于1944年、第二次世界大战尚未结束时举行的布列登森林（Bretton Woods ）会议，当时盟国试图规范第二次世界大战结束后的国际金融秩序。</p><p>当时的金融挑战巨大，亚洲和欧洲的大片地区需要重建。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWUD.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240416-%25E8%2580%25B6%25E4%25BC%25A6-%25E5%258D%258E%25E7%259B%259B%25E9%25A1%25BF%25E5%2587%2586%25E5%25A4%2587%25E5%258A%25A0%25E5%25BC%25BA%25E5%25AF%25B9%25E4%25BC%258A%25E6%259C%2597%25E7%259A%2584%25E5%2588%25B6%25E8%25A3%2581&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%80%B6%E4%BC%A6%EF%BC%9A%E5%8D%8E%E7%9B%9B%E9%A1%BF%E5%87%86%E5%A4%87%E5%8A%A0%E5%BC%BA%E5%AF%B9%E4%BC%8A%E6%9C%97%E7%9A%84%E5%88%B6%E8%A3%81%20-%20https%3A%2F%2Frfi.my%2FAWUD.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%80%B6%E4%BC%A6%EF%BC%9A%E5%8D%8E%E7%9B%9B%E9%A1%BF%E5%87%86%E5%A4%87%E5%8A%A0%E5%BC%BA%E5%AF%B9%E4%BC%8A%E6%9C%97%E7%9A%84%E5%88%B6%E8%A3%81%20-%20https%3A%2F%2Frfi.my%2FAWUD.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWUD.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%80%B6%E4%BC%A6%EF%BC%9A%E5%8D%8E%E7%9B%9B%E9%A1%BF%E5%87%86%E5%A4%87%E5%8A%A0%E5%BC%BA%E5%AF%B9%E4%BC%8A%E6%9C%97%E7%9A%84%E5%88%B6%E8%A3%81&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
