--- a/articles/rfi/999973.md
+++ b/articles/rfi/999973.md
@@ -1,5 +1,5 @@
-<!--1713293102000-->
-[第77届戛纳电影节：导演双周公布片单 台湾影片《白衣苍狗》入选](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240416-%E7%AC%AC77%E5%B1%8A%E6%88%9B%E7%BA%B3%E7%94%B5%E5%BD%B1%E8%8A%82-%E5%AF%BC%E6%BC%94%E5%8F%8C%E5%91%A8%E5%85%AC%E5%B8%83%E7%89%87%E5%8D%95-%E5%8F%B0%E6%B9%BE%E5%BD%B1%E7%89%87-%E7%99%BD%E8%A1%A3%E8%8B%8D%E7%8B%97-%E5%85%A5%E9%80%89)
+<!--1713303902000-->
+[“我们的海洋”大会开幕      希腊推出两个新海洋公园](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240416-%E6%88%91%E4%BB%AC%E7%9A%84%E6%B5%B7%E6%B4%8B-%E5%A4%A7%E4%BC%9A%E5%BC%80%E5%B9%95-%E5%B8%8C%E8%85%8A%E6%8E%A8%E5%87%BA%E4%B8%A4%E4%B8%AA%E6%96%B0%E6%B5%B7%E6%B4%8B%E5%85%AC%E5%9B%AD)
 ------
 
-<div>16/04/2024 - 16:58</div><img src="https://s.rfi.fr/media/display/979e33a6-fbef-11ee-bc3c-005056a97e36/w:1280/p:16x9/Sans%20titre%20%282%29-1.gif"><p><strong>继主竞赛单元、特别展映、戛纳首映、午夜展映、非竞赛单元和一种关注单元片单相继揭晓之后，第77届戛纳电影节平行单元之一的“导演双周”4月16日也正式公布入选片单，来自法国、美国、阿根廷、埃及等9部短片、22部长片入选。台湾导演曾威量和You Qiao Yin执导的首部长片《白衣苍狗》作为唯一一部华语片入选。        </strong></p><div><p>由法国导演工会1969年创办的导演双周是戛纳电影节平行的非竞赛单元，旨在鼓励和发掘新电影人，但每年的片单中也往往有一些知名导演入选。</p><p>导演双周的选片人Julien Rejl宣布，刚刚在去年去世的法国作者电影的标志性导演索菲-弗里尔斯（ Sophie Fillières ）的遗作《我的生活》 "Ma vie, ma gueule "将作为开幕片，该片由 Agnès Jaoui 主演。法国导演让-克里斯托弗-莫里斯执导的喜剧犯罪片《塑料枪》将作为闭幕片。比利时导演尚塔尔·阿克曼的《美国故事：食物、家庭和哲学》将作为特别展映。  </p><p>法国著名女演员伊莎贝尔-于佩尔（Isabelle Huppert）和哈夫西娅-赫兹（Hafsia Herzi）在法国女导演: 帕特里西亚·玛佐伊（Patricia Mazuy ）执导的影片 《波尔多的女囚》中饰演一对女权主义组合。</p><p>今年美国独立电影重回戛纳导演双周，尤其是由泰勒-陶尔米纳（Tyler Taormina）导演的《米勒角的平安夜》，影片汇集了米克尔-塞拉（Michael Cera）和好莱坞传奇人物弗朗西斯-斯科塞斯和索耶-斯皮尔伯格的子女等出演。</p><p>今年的导演双周片单包括了一些电影制作艰难的国家的影片。 其中有阿根廷导演埃尔南-罗塞利的影片《旧的、新的、借来的》 （Algo viejo、algo nuevo、algo prestado）。Julien Rejl表示，由于阿根廷总统米莱的极端自由主义政策，该国电影制作“岌岌可危"；片单中还包括了马赫迪-弗莱费尔（Mahdi Fleifel）的首部巴勒斯坦题材影片《前往未知之地》（"To a land unknown"），该片讲述了两个滞留雅典的巴勒斯坦表兄弟寻找前往德国之路的故事。</p><p>此外，还有一部由 Hala Elkoussy 拍摄的埃及电影《正午的东方》。Julien Rejl 称赞 "这位电影制作人的勇气，他表示，“埃及的审查制度从未如此严厉地打击电影制作人"。</p><p>2024戛纳电影节导演双周单元以日本著名演员北野武的一幅画作为官方海报，以此向北野武的诗意、幽默与滑稽致敬。1996年，北野武曾凭借《坏孩子的天空》入围戛纳导演双周单元。 </p><p> </p><p><strong>以下是2024年导演双周长片入选片单：</strong></p><p>1.    MA VIE MA GUEULE （我的生活）</p><p> 导演： 索菲 弗里尔斯（法国）（开幕片）</p><p>2.    À SON IMAGE（以他自己的形象）</p><p>导演：Thierry de Peretti（法国）</p><p>3.  CHRISTMAS EVE IN MILLER’S POINT （米勒角的圣诞夜 ）</p><p>导演：泰勒·陶尔米纳（美国）</p><p>4.  DESERT OF NAMIBIA（纳米比亚沙漠 ） </p><p>导演：山中洋子（日本）</p><p>5. EAST OF NOON（正午东部） </p><p>导演：Hala Elkoussy（埃及）</p><p>6. EAT THE NIGHT（晚上就餐） </p><p>导演：Caroline Poggi 和 Jonathan Vinel（法国）</p><p>7.  EEPHUS（埃菲斯）</p><p>导演：卡森·隆德（美国）（首部长片）</p><p> 8. GAZER （气体） </p><p>导演：瑞安·J·斯隆（美国）（首部长片）</p><p>9.  GHOST CAT ANZU  （鬼猫） </p><p>导演：Yôko Kuno 和 Nobuhiro Yamashita（日本）</p><p>10. GOOD ONE （好人）</p><p> 导演：印地·唐纳森（美国）（首部长片）</p><p>11. MONGREL  (白衣苍狗)</p><p> 导演：曾威量和 &You Qiao Yi（台湾） （首部长片）</p><p>12. LA PRISONNIÈRE DE BORDEAUX（波尔多的女囚）</p><p> 导演：Patricia Mazuy（法国）</p><p>13.SAVANNA AND THE MOUNTAIN （稀树草原和山） </p><p> 导演：保罗·卡内罗（葡萄牙）</p><p>14. SISTER MIDNIGHT （午夜修女 ）</p><p> 导演：Karan Kandhari（印度）</p><p>15. SOMETHING OLD, SOMETHING NEW, SOMETHING BORROWED （旧的、新的、借来的） </p><p>导演：埃尔南·罗塞利（阿根廷）</p><p>16. THE FALLING SKY（坠落的天空） </p><p>导演：Eryk Rocha 和 Gabriela Carneiro da Cunha（巴西）</p><p>17.  THE HYPERBOREANS  </p><p>导演：Cristóbal León 和 Joaquín Cociña（智利）</p><p> 18.T HE OTHER WAY AROUND（另一种方式）</p><p> 导演：乔纳斯·特鲁埃瓦（西班牙）</p><p>19. TO A LAND UNKNOWN （前往未知的土地 ）</p><p>导演：Mahdi Fleifel（巴勒斯坦、丹麦）</p><p>20. A UNIVERSAL LANGUAGE （通用语言） </p><p>导演：马修·兰金（加拿大）</p><p>21.  LES PISTOLETS EN PLASTIQUE （塑料枪）</p><p>导演：Jean-Christophe Meurisse（法国）（ 闭幕影片）</p><p>22.特别展映影片： </p><p>HISTOIRES D’AMÉRIQUE : FOOD, FAMILY AND PHILOSOPHY （美国故事：食物、家庭和哲学 ）</p><p>导演：尚塔尔·阿克曼（比利时）</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWQz.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240416-%25E7%25AC%25AC77%25E5%25B1%258A%25E6%2588%259B%25E7%25BA%25B3%25E7%2594%25B5%25E5%25BD%25B1%25E8%258A%2582-%25E5%25AF%25BC%25E6%25BC%2594%25E5%258F%258C%25E5%2591%25A8%25E5%2585%25AC%25E5%25B8%2583%25E7%2589%2587%25E5%258D%2595-%25E5%258F%25B0%25E6%25B9%25BE%25E5%25BD%25B1%25E7%2589%2587-%25E7%2599%25BD%25E8%25A1%25A3%25E8%258B%258D%25E7%258B%2597-%25E5%2585%25A5%25E9%2580%2589&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%AC%AC77%E5%B1%8A%E6%88%9B%E7%BA%B3%E7%94%B5%E5%BD%B1%E8%8A%82%EF%BC%9A%E5%AF%BC%E6%BC%94%E5%8F%8C%E5%91%A8%E5%85%AC%E5%B8%83%E7%89%87%E5%8D%95%20%E5%8F%B0%E6%B9%BE%E5%BD%B1%E7%89%87%E3%80%8A%E7%99%BD%E8%A1%A3%E8%8B%8D%E7%8B%97%E3%80%8B%E5%85%A5%E9%80%89%20-%20https%3A%2F%2Frfi.my%2FAWQz.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%AC%AC77%E5%B1%8A%E6%88%9B%E7%BA%B3%E7%94%B5%E5%BD%B1%E8%8A%82%EF%BC%9A%E5%AF%BC%E6%BC%94%E5%8F%8C%E5%91%A8%E5%85%AC%E5%B8%83%E7%89%87%E5%8D%95%20%E5%8F%B0%E6%B9%BE%E5%BD%B1%E7%89%87%E3%80%8A%E7%99%BD%E8%A1%A3%E8%8B%8D%E7%8B%97%E3%80%8B%E5%85%A5%E9%80%89%20-%20https%3A%2F%2Frfi.my%2FAWQz.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWQz.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%AC%AC77%E5%B1%8A%E6%88%9B%E7%BA%B3%E7%94%B5%E5%BD%B1%E8%8A%82%EF%BC%9A%E5%AF%BC%E6%BC%94%E5%8F%8C%E5%91%A8%E5%85%AC%E5%B8%83%E7%89%87%E5%8D%95%20%E5%8F%B0%E6%B9%BE%E5%BD%B1%E7%89%87%E3%80%8A%E7%99%BD%E8%A1%A3%E8%8B%8D%E7%8B%97%E3%80%8B%E5%85%A5%E9%80%89&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>16/04/2024 - 22:30</div><img src="https://s.rfi.fr/media/display/344e934a-fc30-11ee-8a40-005056bf30b7/w:1280/p:16x9/p2-let281-ocean.png"><p><strong></strong></p><div><p>包括来自约 120 个国家的代表团在内的会议第二天，希腊总理强调，他对“这次会议期间做出的承诺表示欢迎，其中有 400 多项承诺，价值超过 100 亿美元”。</p><p>这些承诺“表明我们有采取行动的政治意愿，只有与政府、企业、民间社会合作”才能“应对这一全球挑战”，“保护我们的海洋”。</p><p>在 2023 年 3 月于巴拿马举行的上一次峰会上，与会者承诺投资 190 亿美元（178 亿欧元），用于可持续捕捞、消除污染、海上安全和保护等项目。欧盟去年宣布将投入8亿多欧元用于海洋相关项目。</p><p>希腊总理表示，“早在我们了解气候变化之前，海洋就已经向我们发出了求救信号”。</p><p>作为今年会议的东道国，希腊决定重点讨论四个主题：沿海地区和岛屿的可持续旅游业、绿色海上运输、减少海洋塑料和微塑料以及地中海的绿色转型。</p><p>作为希腊海洋生物多样性保护结构化战略的一部分，希腊正在实施 21 项预算达 7.8 亿欧元，以用于海洋污染防治工作。</p><p>“我们的海洋”大会是由美国国务卿克里亲自发起召开的。第一、二次大会先后于2014年和2015年在美国华盛顿和智利瓦尔帕莱索召开，国家海洋局均派高级别代表团参会。“我们的海洋”第三次大会于9月15日至16日回师至华盛顿举行。</p><p>来自世界主要海洋和岛屿国家的政府、学界、国际机构和非政府组织共90余个代表团参会，其中有15个沿海国家的外长或海洋、渔业部长及11个国际和地区组织代表就海洋保护区、打击非法捕鱼和全球海洋领导力等议题发言。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWU7.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240416-%25E6%2588%2591%25E4%25BB%25AC%25E7%259A%2584%25E6%25B5%25B7%25E6%25B4%258B-%25E5%25A4%25A7%25E4%25BC%259A%25E5%25BC%2580%25E5%25B9%2595-%25E5%25B8%258C%25E8%2585%258A%25E6%258E%25A8%25E5%2587%25BA%25E4%25B8%25A4%25E4%25B8%25AA%25E6%2596%25B0%25E6%25B5%25B7%25E6%25B4%258B%25E5%2585%25AC%25E5%259B%25AD&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E2%80%9C%E6%88%91%E4%BB%AC%E7%9A%84%E6%B5%B7%E6%B4%8B%E2%80%9D%E5%A4%A7%E4%BC%9A%E5%BC%80%E5%B9%95%20%20%20%20%20%20%E5%B8%8C%E8%85%8A%E6%8E%A8%E5%87%BA%E4%B8%A4%E4%B8%AA%E6%96%B0%E6%B5%B7%E6%B4%8B%E5%85%AC%E5%9B%AD%20-%20https%3A%2F%2Frfi.my%2FAWU7.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E2%80%9C%E6%88%91%E4%BB%AC%E7%9A%84%E6%B5%B7%E6%B4%8B%E2%80%9D%E5%A4%A7%E4%BC%9A%E5%BC%80%E5%B9%95%20%20%20%20%20%20%E5%B8%8C%E8%85%8A%E6%8E%A8%E5%87%BA%E4%B8%A4%E4%B8%AA%E6%96%B0%E6%B5%B7%E6%B4%8B%E5%85%AC%E5%9B%AD%20-%20https%3A%2F%2Frfi.my%2FAWU7.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWU7.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E2%80%9C%E6%88%91%E4%BB%AC%E7%9A%84%E6%B5%B7%E6%B4%8B%E2%80%9D%E5%A4%A7%E4%BC%9A%E5%BC%80%E5%B9%95%20%20%20%20%20%20%E5%B8%8C%E8%85%8A%E6%8E%A8%E5%87%BA%E4%B8%A4%E4%B8%AA%E6%96%B0%E6%B5%B7%E6%B4%8B%E5%85%AC%E5%9B%AD&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
