--- a/articles/rfi/999976.md
+++ b/articles/rfi/999976.md
@@ -1,5 +1,5 @@
-<!--1713284102000-->
-[抖音多人揭发每14天向北京传送美国用户个资 官方称属个人不满恶意栽赃](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240416-%E6%8A%96%E9%9F%B3%E5%A4%9A%E4%BA%BA%E6%8F%AD%E5%8F%91%E6%AF%8F14%E5%A4%A9%E5%90%91%E5%8C%97%E4%BA%AC%E4%BC%A0%E9%80%81%E7%BE%8E%E5%9B%BD%E7%94%A8%E6%88%B7%E4%B8%AA%E8%B5%84-%E5%AE%98%E6%96%B9%E7%A7%B0%E5%B1%9E%E4%B8%AA%E4%BA%BA%E4%B8%8D%E6%BB%A1%E6%81%B6%E6%84%8F%E6%A0%BD%E8%B5%83)
+<!--1713300302000-->
+[美国众议院本周或就援助乌克兰以色列及台湾等法案进行独立投票？](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240416-%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E6%9C%AC%E5%91%A8%E6%88%96%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%B9%8C%E5%85%8B%E5%85%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%8F%8A%E5%8F%B0%E6%B9%BE%E7%AD%89%E6%B3%95%E6%A1%88%E8%BF%9B%E8%A1%8C%E7%8B%AC%E7%AB%8B%E6%8A%95%E7%A5%A8)
 ------
 
-<div>16/04/2024 - 17:08</div><img src="https://s.rfi.fr/media/display/fc9c5412-e1f6-11ee-92bb-005056a90284/w:1280/p:16x9/AP22238339577090-1.jpg"><p><strong>美国众议院3月中旬通过法案，要求TikTok与中国母公司字节跳动（ByteDance）脱离关系，否则将予以禁用。TikTok执行长周受资（Shou Zi Chew）则不断在各种管道上声称该公司不会把美国用户的资讯交给北京。然而，《财星》（Fortune）杂志采访曾经在该公司任职过的 11 位人士却显示，周受资所说的并非事实。TikTok前员工证实每14天须向北京传送美国用户个资。        </strong></p><div><p>新头壳今天引述《财星》（Fortune）杂志消息，《财星》采访曾于2022 年 4 月至 9 月担任TikTok资深数据师的特纳（Evan Turner）的说法，指出该公司几乎每隔 14 天就会要他将包含数十万美国用户资料的电子表格，透过电子邮件发送给北京的字节跳动。 这些数据包括 TikTok 美国用户的姓名、电子邮件地址、IP 位址以及地理和人口统计资讯。</p><p>特纳说：“我确实参与了一个向中国提供美国数据的项目。”</p><p>他指控说，“他们完全是共犯。 一些在高层管理人员中工作的美国人完全是这件事的同谋。”</p><p>2022 年之前担任TikTok 安全工程首席技术专案经理的莱恩（Patrick Spaulding Ryan）和另一位前TikTok 美国员工则证实，该公司与字节跳动共享Lark软件，由于这个软件是字节跳动负责经营，字节跳动的员工可以看到 TikTok 员工有关美国用户资料等内容的讨论。</p><p>莱恩指出，TikTok 和字节跳动共享的另一项服务是Seal，但“（TikTok 美国） 员工仍然完全不知道”，没有人知道这套软件是如何运作的。</p><p>该报道采访约翰霍普金斯大学资讯安全研究所主任达布拉（Anton Dahbura）认为，这种联系证明“字节跳动并没有致力于在其中国业务和美国业务之间建立真正的防火墙”。 他表示，前员工对 Lark 与中国的联系的指控“并不令人意外”。</p><p>该报道称，TikTok则声称这些已经离职的员工完全是心怀不满、捏造毫无根据的指控。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWR7.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240416-%25E6%258A%2596%25E9%259F%25B3%25E5%25A4%259A%25E4%25BA%25BA%25E6%258F%25AD%25E5%258F%2591%25E6%25AF%258F14%25E5%25A4%25A9%25E5%2590%2591%25E5%258C%2597%25E4%25BA%25AC%25E4%25BC%25A0%25E9%2580%2581%25E7%25BE%258E%25E5%259B%25BD%25E7%2594%25A8%25E6%2588%25B7%25E4%25B8%25AA%25E8%25B5%2584-%25E5%25AE%2598%25E6%2596%25B9%25E7%25A7%25B0%25E5%25B1%259E%25E4%25B8%25AA%25E4%25BA%25BA%25E4%25B8%258D%25E6%25BB%25A1%25E6%2581%25B6%25E6%2584%258F%25E6%25A0%25BD%25E8%25B5%2583&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%8A%96%E9%9F%B3%E5%A4%9A%E4%BA%BA%E6%8F%AD%E5%8F%91%E6%AF%8F14%E5%A4%A9%E5%90%91%E5%8C%97%E4%BA%AC%E4%BC%A0%E9%80%81%E7%BE%8E%E5%9B%BD%E7%94%A8%E6%88%B7%E4%B8%AA%E8%B5%84%20%E5%AE%98%E6%96%B9%E7%A7%B0%E5%B1%9E%E4%B8%AA%E4%BA%BA%E4%B8%8D%E6%BB%A1%E6%81%B6%E6%84%8F%E6%A0%BD%E8%B5%83%20-%20https%3A%2F%2Frfi.my%2FAWR7.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%8A%96%E9%9F%B3%E5%A4%9A%E4%BA%BA%E6%8F%AD%E5%8F%91%E6%AF%8F14%E5%A4%A9%E5%90%91%E5%8C%97%E4%BA%AC%E4%BC%A0%E9%80%81%E7%BE%8E%E5%9B%BD%E7%94%A8%E6%88%B7%E4%B8%AA%E8%B5%84%20%E5%AE%98%E6%96%B9%E7%A7%B0%E5%B1%9E%E4%B8%AA%E4%BA%BA%E4%B8%8D%E6%BB%A1%E6%81%B6%E6%84%8F%E6%A0%BD%E8%B5%83%20-%20https%3A%2F%2Frfi.my%2FAWR7.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWR7.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%8A%96%E9%9F%B3%E5%A4%9A%E4%BA%BA%E6%8F%AD%E5%8F%91%E6%AF%8F14%E5%A4%A9%E5%90%91%E5%8C%97%E4%BA%AC%E4%BC%A0%E9%80%81%E7%BE%8E%E5%9B%BD%E7%94%A8%E6%88%B7%E4%B8%AA%E8%B5%84%20%E5%AE%98%E6%96%B9%E7%A7%B0%E5%B1%9E%E4%B8%AA%E4%BA%BA%E4%B8%8D%E6%BB%A1%E6%81%B6%E6%84%8F%E6%A0%BD%E8%B5%83&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 22:27</div><img src="https://s.rfi.fr/media/display/f307a8a0-fc2e-11ee-bd36-005056bf30b7/w:1280/p:16x9/%E4%BC%97%E8%AE%AE%E9%99%A2%E8%AE%AE%E9%95%BF%E8%BF%88%E5%85%8B%E2%80%A7%E7%BA%A6%E7%BF%B0%E9%80%8A%EF%BC%88Mike%20Johnson%EF%BC%89.jpg"><p><strong>美国众议院议长约翰逊4月15日表示，本周将就援助乌克兰、以色列及台湾等法案进行独立投票，以推进多项立法。        </strong></p><div><p>数月以来，美国在欧洲的盟友和乌克兰领导人一直敦促美国国会授权向基辅提供更多援助，并警告说，如果没有美国的额外支持，乌克兰军队可能会在与俄罗斯军队的战斗中失去更多阵地。</p><p>周一晚间，美国国会众议长迈克‧约翰逊（Mike Johnson）在与众议院共和党议员会面时，提出了对四项独立法案进行投票的建议，其中包括为台湾提供资金、对伊朗实施更多制裁，以及允许乌克兰兑现被扣押的俄罗斯资产的法案。</p><p>约翰逊在会后说：“我们在世界各地都有像普京、习近平和伊朗这样的恐怖分子、暴君和可怕的领导人，他们都在关注美国是否会为其盟友和我们自己在全球的利益挺身而出，我们会的。”</p><p>“我们将就对以色列的援助、对乌克兰的援助、对印度-太平洋地区的援助进行投票。然后是另一项包含国家安全优先事项的措施，其中包括……对伊朗的其它制裁以及我们在此讨论已久的其它措施。”“这是一个优先事项，我确实希望本周内能完成这项工作。”</p><p>约翰逊承认说：“乌克兰问题显然是共和党方面争议最大的问题”，“我认为美国人民应该得到解释，为什么在这里提供援助符合美国人的利益。”</p><p>该方案将偏离参议院在今年2月通过的950亿美元援助方案，是否能在美国参众两院获得通过仍未可知。但约翰逊表示，将与众议院民主党领袖哈基姆‧杰弗里斯（Hakeem Jeffries）进行讨论，以争取支持。</p><p>他说：“我们将遵守72小时规则。这可能意味着，如果我们明天（4月16日）早些时候得到法案文本，那就可能是周五晚上（表决）了。”</p><p>这表明，在伊朗对美国在中东最亲密的盟友以色列发动袭击两天后，约翰逊正在采取行动，包括向乌克兰、以色列和台湾提供更多军事援助。</p><p>上周五（4月12日），约翰逊曾经前往海湖庄园（Mar-a-Lago）与前总统特朗普会晤。特朗普随后告诉媒体，他正在“研究”乌克兰援助法案。但直到本周一，特朗普尚未对约翰逊的最新提议发表评论。</p><p>美国众议员玛乔丽‧泰勒‧格林（Marjorie Taylor Greene）直言不讳地反对援助乌克兰，并威胁要把约翰逊赶下议长宝座。周一，约翰逊撇开了格林会因为他的最新提议而将他赶下台的说法。他说：“我不会把时间花在担心撤换动议上。”</p><p>周一晚间，白宫也没有立即对约翰逊的提议做出回应。周一早些时候，美国总统拜登在欢迎捷克总理彼得‧菲亚拉（Petr Fiala）访问华盛顿的讲话中呼吁国会就补充援助法案采取行动。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWU5.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240416-%25E7%25BE%258E%25E5%259B%25BD%25E4%25BC%2597%25E8%25AE%25AE%25E9%2599%25A2%25E6%259C%25AC%25E5%2591%25A8%25E6%2588%2596%25E5%25B0%25B1%25E6%258F%25B4%25E5%258A%25A9%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E5%258F%258A%25E5%258F%25B0%25E6%25B9%25BE%25E7%25AD%2589%25E6%25B3%2595%25E6%25A1%2588%25E8%25BF%259B%25E8%25A1%258C%25E7%258B%25AC%25E7%25AB%258B%25E6%258A%2595%25E7%25A5%25A8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E6%9C%AC%E5%91%A8%E6%88%96%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%B9%8C%E5%85%8B%E5%85%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%8F%8A%E5%8F%B0%E6%B9%BE%E7%AD%89%E6%B3%95%E6%A1%88%E8%BF%9B%E8%A1%8C%E7%8B%AC%E7%AB%8B%E6%8A%95%E7%A5%A8%EF%BC%9F%20-%20https%3A%2F%2Frfi.my%2FAWU5.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E6%9C%AC%E5%91%A8%E6%88%96%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%B9%8C%E5%85%8B%E5%85%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%8F%8A%E5%8F%B0%E6%B9%BE%E7%AD%89%E6%B3%95%E6%A1%88%E8%BF%9B%E8%A1%8C%E7%8B%AC%E7%AB%8B%E6%8A%95%E7%A5%A8%EF%BC%9F%20-%20https%3A%2F%2Frfi.my%2FAWU5.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWU5.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E6%9C%AC%E5%91%A8%E6%88%96%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%B9%8C%E5%85%8B%E5%85%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%8F%8A%E5%8F%B0%E6%B9%BE%E7%AD%89%E6%B3%95%E6%A1%88%E8%BF%9B%E8%A1%8C%E7%8B%AC%E7%AB%8B%E6%8A%95%E7%A5%A8%EF%BC%9F&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
