--- a/articles/rfi/999977.md
+++ b/articles/rfi/999977.md
@@ -1,5 +1,5 @@
-<!--1713284102000-->
-[继非洲毛驴之后，穿山甲又成为中华传统的牺牲品 - 环保天地](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E7%8E%AF%E4%BF%9D%E5%A4%A9%E5%9C%B0/20240416-%E7%BB%A7%E9%9D%9E%E6%B4%B2%E6%AF%9B%E9%A9%B4%E4%B9%8B%E5%90%8E%EF%BC%8C%E7%A9%BF%E5%B1%B1%E7%94%B2%E5%8F%88%E6%88%90%E4%B8%BA%E4%B8%AD%E5%8D%8E%E4%BC%A0%E7%BB%9F%E7%9A%84%E7%89%BA%E7%89%B2%E5%93%81)
+<!--1713300302000-->
+[戴琪：拜登政府正&quot;认真审视&quot;各种贸易防御工具以应对中国经济威胁 - 要闻分析](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E5%88%86%E6%9E%90/20240416-%E6%88%B4%E7%90%AA-%E6%8B%9C%E7%99%BB%E6%94%BF%E5%BA%9C%E6%AD%A3-%E8%AE%A4%E7%9C%9F%E5%AE%A1%E8%A7%86-%E5%90%84%E7%A7%8D%E8%B4%B8%E6%98%93%E9%98%B2%E5%BE%A1%E5%B7%A5%E5%85%B7%E4%BB%A5%E5%BA%94%E5%AF%B9%E4%B8%AD%E5%9B%BD%E7%BB%8F%E6%B5%8E%E5%A8%81%E8%83%81)
 ------
 
-<div>16/04/2024 - 17:30</div><img src="https://s.rfi.fr/media/display/87b6f128-e5a6-11ec-8321-005056bfb2b6/w:1280/p:16x9/AP19047535489920.jpg"><p><strong>在非洲的毛驴之后，非洲的穿山甲正在成为中国传统营养医学的新的牺牲品。记得今年二月，非洲联盟决定禁止对中国出口毛驴之后，中国有媒体报道说，事实上，中国古代的医学书上明确记载着，阿胶的制作来源是牛皮，而并非是毛驴皮。可惜这么多年来每年因其皮囊而遭到无辜宰杀的数千万头非洲毛驴。                    </strong></p><div><p>同毛驴一样，穿山甲也同样没有任何药用价值，但是，尽管如此，自 2000 年代以来，穿山甲鳞片的使用导致穿山甲贩运的激增，尤其是从非洲被运往中国。在中国，穿山甲的鳞片或血液被用来制作各种药剂，包括一种据说能增强阳刚之气的药剂。而事实上，穿山甲的鳞片同我们人类的指甲一样是由角蛋白制成，它并没有任何特殊的功用。</p><p>而且，为了提高穿山甲的市场价格，人们往往活捉穿山甲，这或许就是新冠疫情初期，穿山甲曾经被认为是病毒从动物传染给人的中间宿主的原因所在。</p><p><strong>非法贩卖非洲穿山甲的路线</strong></p><p>目前世界上已知的穿山甲共有 8 种，其中有 4 种在亚洲，另外4 种在中非。 刚果盆地森林是世界第二大热带森林，由喀麦隆、中非共和国、刚果共和国、刚果民主共和国、加蓬和赤道几内亚六个国家共同拥有，这里是非洲穿山甲的主要栖息地。</p><p>原则上，穿山甲是一种受保护的动物，其贸易自 2017 年起被禁止。然而，非法捕获以及贩卖穿山甲的活动却正在蓬勃发展。据中非地区安全研究所（Institute for Security Studies）中非地区协调员奥卢沃勒-奥杰瓦莱（Oluwole Ojewale）去年发表的一份报告，这种非法贸易带来了数百万美元的收入。倘若不立刻采取措施，穿山甲面临被灭绝的危险。法广法语部记者Amelie Tulet 发自喀麦隆的报道说<strong>：</strong>“这是一个涉及数百万美元的贸易，穿山甲的肉体与鳞片的消费者主要位于亚洲，它们往往在刚果流域的森林中被捕获，由于当捕食者靠近时，穿山甲就会自动卷成团，因此很容易被捕获。之后，村民将其卖给中间商。这些哺乳动物或完整或被宰杀后，经由港口离开非洲大陆，向西途经尼日利亚，向东途经坦桑尼亚和肯尼亚，或乘飞机离开。在喀麦隆，包括《每日新闻》的马蒂亚斯-穆安德-恩加莫在内的几位记者一直在调查这种贩运活动，据他介绍，<em>例如，在机场，一名海关官员告诉我们，贩运者有时会将鳞片碾成粉末，装入牛奶罐中，以便神不知鬼不觉地通过海关 </em>。虽然穿山甲在新冠疫情爆发初期曾经饱受批评，但它在森林生态系统中事实上发挥着重要的调节作用。喀麦隆记者马蒂亚斯-穆恩德-恩加莫介绍说， ‘一只穿山甲每天要消耗大约 20 万只蚂蚁和白蚁，一只穿山甲每年要消耗大约 7000 万只蚂蚁和白蚁。我们可以看到这对刚果盆地森林的影响，对我们种植园的影响则更为重要<em>。 ’</em>到目前为止，刚果流域森林中究竟有多少只穿山甲尚且有待于统计，但是，有一点可以肯定，倘若，不立即采取措施，那么，这种动物将面临被偷猎至灭绝的危险。“</p><p><strong>如何才能有效保护面临灭绝威胁的穿山甲？</strong></p><p>尼日利亚的专家奥卢沃勒-奥杰瓦莱（Oluwole Ojewale）向法广指出，问题在于无论是在非洲当地还是在国际上都缺乏打击这种贩运背后网络的培训和资源，缺乏人力资源，包括护林员，安全执法人员等等，再就是缺乏信息与法规。因为在绝大多数国家，民众并不知道有关保护或禁止穿山甲贸易的法律"。</p><p>确实，要避免穿山甲的物种消失，一方面必须禁止并且切实地阻止非法狩猎，严厉禁止非法贸易。另一方面，还必须从消费者这端着手，因为消费这种受到保护的动物本身也是一种犯法的行为，而且这种消费并没有任何价值。</p><p><a href="http://www.cbcgdf.org/NewsShow/4936/24388.html#:~:text=1.穿山甲的外貌和生活习性&text=它们的四肢粗壮，爪子,和味觉来寻找食物。" target="_blank">中国生物多样性保护与绿色基金会的网站</a>上就明确规定，2020年起，中国将穿山甲由国家二级保护野生动物提升至一级，2020年版的《中国药典》也将穿山甲进行了移除，因为今天大家都明白，野生动物不应该被用来做药材。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%9D%A8%E7%9C%89/" title="杨眉">杨眉</a></div></div></div></div>
+<div>16/04/2024 - 21:08</div><img src="https://s.rfi.fr/media/display/1ffbec94-a1b4-11ed-b3c1-005056a90284/w:1280/p:16x9/2023-01-31T171740Z_1417667005_RC2UZX9T8WZU_RTRMADP_3_USA-TRADE-CHINA-TECH.JPG"><p><strong>美国贸易代表戴琪（Katherine Tai）将于周二在国会听证会上作证从而告诉美国国会：拜登政府正在"认真审视"美国的各种贸易防御工具，以应对中国贸易和经济政策所构成的威胁。                    </strong></p><div><p>据路透社4月16日发自华盛顿的消息，戴琪在提前提供的书面证词摘要中指出，中国的政策导致“多个行业出现依赖性和脆弱性，伤害了美国工人和商家，并给我们的供应链制造了真正的风险”。拜登政府为应对中国贸易和经济政策所构成的威胁，正在“认真考虑”美国的各种贸易防御工具，包括重新检讨特朗普时代对中国进口商品课征的关税。</p><p>路透社引述戴琪的话说，“这也是为什么我们正在认真考虑我们现有的工具如何应对这一问题，包括通过对中国相关301条款关税历时四年的检讨。”</p><p>戴琪在书面证词中表示，她正在认真审阅一份由五家美国工会提出的调查申请，该申请要求对中国海上后勤以及造船业中被指控的不公平行为、政策和作法进行新的301条款调查。</p><p>戴琪在证词摘要中还表示，“我们与中华人民共和国的经济关系是复杂的。正如总统所说，我们希望与中国竞争而不是冲突。” 拜登政府在供应链方面工作的主要目的，就是要减少对中国的依赖，让供应来源多元化，以避免像新冠疫情末期出现的瓶颈。</p><p>一周前，美国财政部长耶伦在访华期间已向中国领导人发出警告：由于中国对电动车、太阳能板和其他清洁能源物资的过分投资导致的产能过剩，形成了一波不可接受的出口浪潮的威胁，伤害了美国及其他地方的制造商。</p><p>耶伦周二也将在美国财政部与中国官员就“平衡成长”展开新的对话。路透社引述中国贸易专家的话说，耶伦对北京有关产能过剩的警告可能只是第一步，后续可能会启动新一轮“301条款”不公平贸易行为的调查，从而导致对电动车、太阳能板和其他进口产品加征新的关税。</p><p><strong>2024年度《对外贸易壁垒国家贸易评估报告》</strong></p><p>在不久前的3月29日，美国贸易代表戴琪曾发布2024年度《对外贸易壁垒国家贸易评估报告》（National Trade Estimate Report on Foreign Trade Barriers），其中特别提到了中国在农产品、非市场政策和做法以及助长政府侵犯权利的数据政策方面的壁垒。该报告自1985年以来每年发布一次，全面审查美国商品和服务出口、对外直接投资以及电子商务在主要出口市场面临的重大外国壁垒。</p><p>本年度的报告指出，在农产品方面，中华人民共和国在一系列农产品和食品上存在不透明且繁琐的设施注册要求，作为受高致病性禽流感影响的地区之一，其家禽产品贸易没有遵守基于科学和风险的标准和承诺。</p><p>报告还表示，中国国家主导的非市场经济和贸易方式继续影响着中国奉行的产业政策，并为中国企业提供不公平的竞争优势。这包括大规模的财政支持、监管和其他优惠以及旨在使外国竞争对手处于不利地位的正式和非正式政策和做法。美国贸易代表办公室指出，这种行为严重扭曲和扰乱市场，导致严重且持续的产能过剩，钢铁、铝和太阳能等行业当前的情况就证明了这一点。</p><p>报告还列出了中华人民共和国和俄罗斯等一系列国家存在的有问题的数据政策。报告说，数据政策被利用来推进国家的侵入行为，例如，这些政府可以利用数据本地化政策来监视其人民、干涉劳工权利以及以其他方式损害公民和政治自由。在某些情况下，这些数据政策也缺乏明确性并存在合规问题。</p><p><strong>拉美去年从中国进口钢材年增44% 达创纪录的1000万吨</strong></p><p>此外，最新公布的拉丁美洲钢铁协会（Latin American Steel Association）数据显示：去年拉美地区国家从中国进口的钢材达到创纪录的1000万吨，年增44%。20年前，这个数字只有8.5万吨。</p><p>在拉丁美洲，约有140万人从事钢铁业，但他们的生计日益受到威胁，因为中国钢铁的价格比本土生产的价格低了40%。拉丁美洲钢铁协会主管瓦格纳（Alejandro Wagner）告诉法新社：中国在拉丁美洲的影响力太大了。没有人反对国家之间的贸易，但必须是公平贸易。</p><p>随着廉价的中国钢铁涌入拉丁美洲，威胁到与该行业相关的数以十万计就业机会，拉美金属工人呼吁提高进口关税，比如智利和巴西等国家。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E8%82%96%E6%9B%BC/" title="肖曼">肖曼</a></div></div></div></div>
