--- a/articles/rfi/999978.md
+++ b/articles/rfi/999978.md
@@ -1,5 +1,5 @@
-<!--1713282301000-->
-[拜登夫妇公布报税资料如下](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240416-%E6%8B%9C%E7%99%BB%E5%A4%AB%E5%A6%87%E5%85%AC%E5%B8%83%E6%8A%A5%E7%A8%8E%E8%B5%84%E6%96%99%E5%A6%82%E4%B8%8B)
+<!--1713293102000-->
+[在中国 持不同政见者及其亲朋不断受攻击和骚扰](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240416-%E5%9C%A8%E4%B8%AD%E5%9B%BD-%E6%8C%81%E4%B8%8D%E5%90%8C%E6%94%BF%E8%A7%81%E8%80%85%E5%8F%8A%E5%85%B6%E4%BA%B2%E6%9C%8B%E4%B8%8D%E6%96%AD%E5%8F%97%E6%94%BB%E5%87%BB%E5%92%8C%E9%AA%9A%E6%89%B0)
 ------
 
-<div>16/04/2024 - 17:26</div><img src="https://s.rfi.fr/media/display/de4dac9c-fa86-11ee-8398-005056bfb2b6/w:1280/p:16x9/AP24103786777136.jpg"><p><strong>根据美国总统拜登及第一夫人吉尔2023年报税资料，美国第一夫妇收入为61万9976美元，其中大部分来自总统的40万美元薪水，以及吉尔在附近维吉尼亚州一所大学任教的8万5985美元的薪水。        </strong></p><div><p>拜登夫妇公布报税资料即申报表，象征性延续了前任总统特朗普时期暂时中断、但展现白宫透明度的传统。</p><p>据法新社说，这个一年一度的不成文传统目的在于建立外界对白宫的信任，其他政治人物和候选人也经常这么做。</p><p>拜登夫妇2023年收入为61万9976美元。2022年拜登夫妇申报57万9514美元收入，2021年拜登申报61万702美元收入。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWRP.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240416-%25E6%258B%259C%25E7%2599%25BB%25E5%25A4%25AB%25E5%25A6%2587%25E5%2585%25AC%25E5%25B8%2583%25E6%258A%25A5%25E7%25A8%258E%25E8%25B5%2584%25E6%2596%2599%25E5%25A6%2582%25E4%25B8%258B&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%8B%9C%E7%99%BB%E5%A4%AB%E5%A6%87%E5%85%AC%E5%B8%83%E6%8A%A5%E7%A8%8E%E8%B5%84%E6%96%99%E5%A6%82%E4%B8%8B%20-%20https%3A%2F%2Frfi.my%2FAWRP.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%8B%9C%E7%99%BB%E5%A4%AB%E5%A6%87%E5%85%AC%E5%B8%83%E6%8A%A5%E7%A8%8E%E8%B5%84%E6%96%99%E5%A6%82%E4%B8%8B%20-%20https%3A%2F%2Frfi.my%2FAWRP.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWRP.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%8B%9C%E7%99%BB%E5%A4%AB%E5%A6%87%E5%85%AC%E5%B8%83%E6%8A%A5%E7%A8%8E%E8%B5%84%E6%96%99%E5%A6%82%E4%B8%8B&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 19:45</div><img src="https://s.rfi.fr/media/display/776652e8-5832-11ec-9be5-005056a90284/w:1280/p:16x9/rq.svg.png"><p><strong>在中国，持不同政见者及其亲人不断受到骚扰，这是世界报近日报道指出的。 根据非政府组织“中国人权卫士（CHRD）”称，中国当局会毫不犹豫地攻击中国人权卫士的子女，以粉碎任何抵抗企图。         </strong></p><div><p>世界报记者勒帕特的报道指出，在中国，异议人士及其亲人不断受到骚扰。在报道中，他就一张法新社的相片向读者指出，在这照片中，我们看到一名身穿黑色夹克、骑着蓝色电动滑板车的男子似乎在一栋大楼前站岗。 照片的作者是一名13岁的孩子。 他拍摄了最近几天跟踪他的其他黑衣人。  </p><p style="text-align:left">他的母亲48 岁的 <strong>可可(</strong>化名），向《世界报》分享了这些照片。 她疑惑问道：“他的哥哥已经入狱了，为什么还要针对一个13岁的孩子？“ 可可知道，骚扰年幼的儿子是为了阻止她和丈夫保护他们的大儿子，大儿子于 2020 年因“煽动骚乱”和“侵犯他人隐私”罪名被判处 14 年监禁。  </p><p style="text-align:left">牛腾宇随后被指控为一家传播有关中国国家主席习近平女儿信息的网站工作。  </p><p style="text-align:left">在他母亲的眼中，他是一个替罪羊，为网站的创始人受罚，而这些创始人都在国外。 四年来，可可一直是中国警察国家的受害者。  </p><p style="text-align:left">她经常遭受死亡威胁，当局向她的朋友们采取诽谤她的行动，她无法谋生，甚至无法入睡：她居住的河南省（中国中部）说，她家每天晚上都会发出刺耳的噪音。 。 2024 年初，她的丈夫被拘留了几周只，因为试图探望被监禁在广东省（东南部）的儿子。 </p><p style="text-align:left">尽管情况极端，但牛腾宇父母的情况在国内并不罕见。 人权组织联盟《中国人权卫士（CHRD）》在题为“如果我不服从，我的家人将受苦”的报告中引用了他们的案例以及其他大约20个案例。 </p><p style="text-align:left"><strong>“集体惩罚”：</strong> </p><p style="text-align:left">总部位于华盛顿的该非政府组织，列出了 2023 年全年针对人权活动人士的袭击清单。  </p><p style="text-align:left">该组织谴责道：“中国当局集体惩罚人权捍卫者的家人，包括幼儿。 这些惩罚没有法律依据，但对中国大陆居民和海外侨民造成了严重后果。 国际法禁止集体惩罚行为是国际法所禁止的。” </p><p style="text-align:left">该组织所提到的那些做法并不新鲜，但本报告的重点是 2023 年，24 页文件中引用的大多数活动人士在几年前就被定罪，并被释放了。 </p><p style="text-align:left">报告指出，“中国当局几十年来一直使用这些策略，造成巨大损失而不受惩罚。 寻求赔偿往往会引发警方进一步的骚扰、暴行和一些毫无根据的诉讼。” </p><p style="text-align:left">报告中被提及的受害者包括数名律师、公民记者张展（自 2020 年以来因报道新冠疫情之初武汉封城的报道而被拘留），以及彭利发（2022 年在北京一座大桥上，他举着批评中国共产党和限制公民的横幅）。 同时，那些维吾尔族和藏族的社区也成为集体攻击目标。 </p><p style="text-align:left">“警察常驻在我们门外” 该报告特别令人震惊的是，它详细介绍了儿童们的待遇，这些儿童被用作向父母施加压力的手段。 这是致力于捍卫人权的著名律师王全章家人的案例，王全章于 2015 年在一场导致 300 多名律师被捕的运动中失踪。<strong> 王全璋</strong>于2015年至2020年因“颠覆国家政权”罪被监禁，虽然根据文件他现已正式获释四年了，但他的磨难却仍在继续着。 </p><p style="text-align:left"><strong>王全璋</strong>和他的家人不断受到警方的骚扰，他的妻子李文足必须为他辩护，以至于2015年起，他们夫妇俩都不能亲自送儿子上学。 </p><p style="text-align:left">根据 CHRD 引述了自己也成为活动人士的李文足的见证说：“自3月8日以来，我们不得不依靠邻居的好心帮忙。因为警察一直在我们家门前看守站岗，不让我和丈夫外出。” </p><p style="text-align:left">经过多年没有父亲后，王全璋的儿子，11 岁的儿子“泉泉”，其如今在警察对全家进行驱逐和骚扰的情况下长大。 </p><p style="text-align:left">李文足女士继续说道：“一天晚上，我们在接宿我们的一位朋友家，被猛烈敲门声吵醒。 泉泉吓得一晚上都抱着我，浑身发抖。”。 警察声称正在寻找毒品。 其他时候，是朋友公寓的房东会来拜访，并通知他们必须离开住房，而且为了加快驱逐的速度，并说要切断住房的水和煤气。 或者是泉泉学校，在当局的压力下将这孩子拒之校门外。  </p><p style="text-align:left">人权捍卫者委员会 CHRD 还援引了居住在国外的维吾尔族或藏人的案例，他们受到警方的远程威胁，如果他们的家人为亲人或社区动员起来，就会遭到报复。  </p><p style="text-align:left">每次，当局的目标似乎都是粉碎那些拒绝承认自己有罪的被告们的抵抗行动（并且总是受到更严厉的惩罚）或是因为这些异议人士亲人为他们动员起来的任何抵抗企图。  </p><p style="text-align:left">牛腾宇的母亲可可在电话里叹息道。：“我想他们想要的就是：让我消失。” </p><p style="text-align:left"> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWTB.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240416-%25E5%259C%25A8%25E4%25B8%25AD%25E5%259B%25BD-%25E6%258C%2581%25E4%25B8%258D%25E5%2590%258C%25E6%2594%25BF%25E8%25A7%2581%25E8%2580%2585%25E5%258F%258A%25E5%2585%25B6%25E4%25BA%25B2%25E6%259C%258B%25E4%25B8%258D%25E6%2596%25AD%25E5%258F%2597%25E6%2594%25BB%25E5%2587%25BB%25E5%2592%258C%25E9%25AA%259A%25E6%2589%25B0&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%9C%A8%E4%B8%AD%E5%9B%BD%20%E6%8C%81%E4%B8%8D%E5%90%8C%E6%94%BF%E8%A7%81%E8%80%85%E5%8F%8A%E5%85%B6%E4%BA%B2%E6%9C%8B%E4%B8%8D%E6%96%AD%E5%8F%97%E6%94%BB%E5%87%BB%E5%92%8C%E9%AA%9A%E6%89%B0%20-%20https%3A%2F%2Frfi.my%2FAWTB.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%9C%A8%E4%B8%AD%E5%9B%BD%20%E6%8C%81%E4%B8%8D%E5%90%8C%E6%94%BF%E8%A7%81%E8%80%85%E5%8F%8A%E5%85%B6%E4%BA%B2%E6%9C%8B%E4%B8%8D%E6%96%AD%E5%8F%97%E6%94%BB%E5%87%BB%E5%92%8C%E9%AA%9A%E6%89%B0%20-%20https%3A%2F%2Frfi.my%2FAWTB.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWTB.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%9C%A8%E4%B8%AD%E5%9B%BD%20%E6%8C%81%E4%B8%8D%E5%90%8C%E6%94%BF%E8%A7%81%E8%80%85%E5%8F%8A%E5%85%B6%E4%BA%B2%E6%9C%8B%E4%B8%8D%E6%96%AD%E5%8F%97%E6%94%BB%E5%87%BB%E5%92%8C%E9%AA%9A%E6%89%B0&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
