--- a/articles/rfi/999981.md
+++ b/articles/rfi/999981.md
@@ -1,5 +1,5 @@
-<!--1713278703000-->
-[美国大使抵访韩朝边境 敦促俄中不要“奖励”朝鲜的不良行为](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240416-%E7%BE%8E%E5%9B%BD%E5%A4%A7%E4%BD%BF%E6%8A%B5%E8%AE%BF%E9%9F%A9%E6%9C%9D%E8%BE%B9%E5%A2%83-%E6%95%A6%E4%BF%83%E4%BF%84%E4%B8%AD%E4%B8%8D%E8%A6%81-%E5%A5%96%E5%8A%B1-%E6%9C%9D%E9%B2%9C%E7%9A%84%E4%B8%8D%E8%89%AF%E8%A1%8C%E4%B8%BA)
+<!--1713291301000-->
+[悉尼教堂持刀砍人案定性恐袭 马克龙称赞两位法国人英勇救人](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240416-%E6%82%89%E5%B0%BC%E6%95%99%E5%A0%82%E6%8C%81%E5%88%80%E7%A0%8D%E4%BA%BA%E6%A1%88%E5%AE%9A%E6%80%A7%E6%81%90%E8%A2%AD-%E9%A9%AC%E5%85%8B%E9%BE%99%E7%A7%B0%E8%B5%9E%E4%B8%A4%E4%BD%8D%E6%B3%95%E5%9B%BD%E4%BA%BA%E8%8B%B1%E5%8B%87%E6%95%91%E4%BA%BA)
 ------
 
-<div>16/04/2024 - 15:53</div><img src="https://s.rfi.fr/media/display/d9cbf072-6bba-11ed-9d99-005056bf30b7/w:1280/p:16x9/AP22313661331641.jpg"><p><strong>美国驻联合国大使周二敦促俄罗斯和中国改弦更张，停止奖励朝鲜的不良行为，并阻止朝鲜因武器计划而逃避制裁。        </strong></p><div><p>美国驻联合国特使敦促俄罗斯和中国不要“奖励”朝鲜的不良行为。美国驻联合国大使琳达·托马斯·格林菲尔德于 2024 年 4 月 16 日在韩国板门店休战村附近的坡州博尼法斯美军基地向记者发表讲话时发表上述言论。</p><p>琳达·托马斯·格林菲尔德大使访问了韩朝边境非军事区，非军事区是朝韩两国之间戒备森严的边界，路透社今天报道称，严格来说，两国仍处于交战状态。</p><p>在她访问韩国之前，俄罗斯拒绝了多国专家小组的年度更新，该小组在过去15年里一直监督联合国旨在遏制朝鲜核计划和导弹计划的制裁措施的执行情况。</p><p>托马斯-格林菲尔德表示，莫斯科的否决和中国的弃权只会“增强”朝鲜规避国际制裁的做法，并“保护”朝鲜免受问责。</p><p>她告诉记者，“隐藏真相并不能改变事实。奖励不良行为只会鼓励这种行为。”她说， “我们敦促俄罗斯和中国改弦更张，并再次敦促平壤选择外交手段，来到谈判桌前致力于建设性对话。”</p><p>据格林菲尔德表示，华盛顿将与韩国、日本和安理会其他伙伴合作，寻找“一些创造性的方式、一些创造性的思维”，以继续监督制裁的执行和该小组开展的其他工作说。</p><p>后来在首尔，她会见了一群年轻的朝鲜叛逃者，称赞他们逃往韩国“勇敢、鼓舞人心”。她告诉他们：“我的首要任务之一是让世界知道朝鲜侵犯人权行为，提高人们对逃亡者的关注度并扩大逃亡者的声音。”她指的是朝鲜官方名称“民主人民共和国”的首字母缩写。</p><p>托马斯-格林菲尔德于周日抵达，并于周一会见了韩国总统尹锡悦以及首尔外交部长和国防部长，讨论如何阻止朝鲜的武器计划并在这个与世隔绝的国家促进人权。</p><p>美国大使还将前往日本，预计会见2000年代初被朝鲜绑架的日本公民的家人，并访问1945年遭到美国核弹袭击的长崎，直到周六。</p><p>据路透社说，韩国和日本都是美国的盟友，目前均是安理会成员。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWQ0.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240416-%25E7%25BE%258E%25E5%259B%25BD%25E5%25A4%25A7%25E4%25BD%25BF%25E6%258A%25B5%25E8%25AE%25BF%25E9%259F%25A9%25E6%259C%259D%25E8%25BE%25B9%25E5%25A2%2583-%25E6%2595%25A6%25E4%25BF%2583%25E4%25BF%2584%25E4%25B8%25AD%25E4%25B8%258D%25E8%25A6%2581-%25E5%25A5%2596%25E5%258A%25B1-%25E6%259C%259D%25E9%25B2%259C%25E7%259A%2584%25E4%25B8%258D%25E8%2589%25AF%25E8%25A1%258C%25E4%25B8%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E5%A4%A7%E4%BD%BF%E6%8A%B5%E8%AE%BF%E9%9F%A9%E6%9C%9D%E8%BE%B9%E5%A2%83%20%E6%95%A6%E4%BF%83%E4%BF%84%E4%B8%AD%E4%B8%8D%E8%A6%81%E2%80%9C%E5%A5%96%E5%8A%B1%E2%80%9D%E6%9C%9D%E9%B2%9C%E7%9A%84%E4%B8%8D%E8%89%AF%E8%A1%8C%E4%B8%BA%20-%20https%3A%2F%2Frfi.my%2FAWQ0.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E5%A4%A7%E4%BD%BF%E6%8A%B5%E8%AE%BF%E9%9F%A9%E6%9C%9D%E8%BE%B9%E5%A2%83%20%E6%95%A6%E4%BF%83%E4%BF%84%E4%B8%AD%E4%B8%8D%E8%A6%81%E2%80%9C%E5%A5%96%E5%8A%B1%E2%80%9D%E6%9C%9D%E9%B2%9C%E7%9A%84%E4%B8%8D%E8%89%AF%E8%A1%8C%E4%B8%BA%20-%20https%3A%2F%2Frfi.my%2FAWQ0.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWQ0.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E5%A4%A7%E4%BD%BF%E6%8A%B5%E8%AE%BF%E9%9F%A9%E6%9C%9D%E8%BE%B9%E5%A2%83%20%E6%95%A6%E4%BF%83%E4%BF%84%E4%B8%AD%E4%B8%8D%E8%A6%81%E2%80%9C%E5%A5%96%E5%8A%B1%E2%80%9D%E6%9C%9D%E9%B2%9C%E7%9A%84%E4%B8%8D%E8%89%AF%E8%A1%8C%E4%B8%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>16/04/2024 - 17:44</div><img src="https://s.rfi.fr/media/display/1b5bd2be-fbe8-11ee-90d7-005056a90284/w:1280/p:16x9/2024-04-14T072041Z_689654122_RC2367AHS8HL_RTRMADP_3_AUSTRALIA-CRIME.JPG"><p><strong>澳大利亚警方今天表示，悉尼一座教会昨天在直播礼拜期间发生的持刀攻击案，是一起涉及宗教动机的极端主义恐怖行为。警方并呼吁当地社区民众控制怒火、保持冷静。法国总统马克龙今天赞扬两名法国人在抵御砍人案中的英雄行为。        </strong></p><div><p>据路透社今天报道称，悉尼西部郊区一座亚述基督教教堂昨天傍晚发生袭击事件，造成一名著名的主教受伤，所幸没有危及性命。</p><p>新南威尔斯州（New South Wales）警察局长韦柏（Karen Webb）在记者会上说：「将所有资料纳入考量后，我宣布这是一起恐怖事件。」她表示，这起攻击被视为是有宗教动机的「极端主义」行为，恐吓民众，包括教堂内的教区居民与观看线上直播的信徒。</p><p>韦柏表示，这名犯嫌「为警方所知」，但并没有被列在任何恐怖分子观察名单上。韦柏说，赶赴现场因应的警方很快就遭教会外的愤怒群众攻击，「民众利用现场可取用的物品攻击警察，包括拿砖头、混凝土与栅栏丢向警察、警察装置与警车」。</p><p>韦柏说一整个晚上都有受伤警察送医治疗。她虽没有提供受伤人数，但说这群民众损坏了20辆警车。</p><p>韦柏说：「这无法令人接受，涉及那场骚乱的人可以料想日后会有人来敲门，可能不是今天、也可能不会是明天，但我们会找到你，将你逮捕到案。」</p><p>该消息没有进一步民众对警方发怒的原因与细节。</p><p>据法新社消息，周二，法国总统马克龙赞扬了两名法国人的英勇行为，称他们是“真正的英雄”，他们在周六澳大利亚悉尼一家购物中心发生的另一次持刀袭击事件时进行了抵御，该事件导致六人死亡。</p><p>法国总统在 X 上写道：“我们的两位同胞表现得像真正的英雄，他因此非常自豪，对两人表达感激。”他还向“遭受袭击的澳大利亚人”表示“哀悼”。</p><p>法国大使表示，塞拉斯·德普雷奥和达米安·盖罗“在试图制服袭击者时表现出了极大的勇气”。</p><p>澳大利亚总理阿尔巴尼斯周二宣布，法国两人中的一位达米安·盖罗特(Damien Guerot)将获得澳大利亚公民身份，他在自动扶梯上用一根棍子英勇地击退了凶嫌。</p><p>事件中，五名妇女和一名巴基斯坦人保安丧生，该袭击并未归咎于恐怖主义。 警方正在调查袭击者是一名 40 岁的精神病男子，他是否专门针对女性行凶。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWRj.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240416-%25E6%2582%2589%25E5%25B0%25BC%25E6%2595%2599%25E5%25A0%2582%25E6%258C%2581%25E5%2588%2580%25E7%25A0%258D%25E4%25BA%25BA%25E6%25A1%2588%25E5%25AE%259A%25E6%2580%25A7%25E6%2581%2590%25E8%25A2%25AD-%25E9%25A9%25AC%25E5%2585%258B%25E9%25BE%2599%25E7%25A7%25B0%25E8%25B5%259E%25E4%25B8%25A4%25E4%25BD%258D%25E6%25B3%2595%25E5%259B%25BD%25E4%25BA%25BA%25E8%258B%25B1%25E5%258B%2587%25E6%2595%2591%25E4%25BA%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%82%89%E5%B0%BC%E6%95%99%E5%A0%82%E6%8C%81%E5%88%80%E7%A0%8D%E4%BA%BA%E6%A1%88%E5%AE%9A%E6%80%A7%E6%81%90%E8%A2%AD%20%E9%A9%AC%E5%85%8B%E9%BE%99%E7%A7%B0%E8%B5%9E%E4%B8%A4%E4%BD%8D%E6%B3%95%E5%9B%BD%E4%BA%BA%E8%8B%B1%E5%8B%87%E6%95%91%E4%BA%BA%20-%20https%3A%2F%2Frfi.my%2FAWRj.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%82%89%E5%B0%BC%E6%95%99%E5%A0%82%E6%8C%81%E5%88%80%E7%A0%8D%E4%BA%BA%E6%A1%88%E5%AE%9A%E6%80%A7%E6%81%90%E8%A2%AD%20%E9%A9%AC%E5%85%8B%E9%BE%99%E7%A7%B0%E8%B5%9E%E4%B8%A4%E4%BD%8D%E6%B3%95%E5%9B%BD%E4%BA%BA%E8%8B%B1%E5%8B%87%E6%95%91%E4%BA%BA%20-%20https%3A%2F%2Frfi.my%2FAWRj.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWRj.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%82%89%E5%B0%BC%E6%95%99%E5%A0%82%E6%8C%81%E5%88%80%E7%A0%8D%E4%BA%BA%E6%A1%88%E5%AE%9A%E6%80%A7%E6%81%90%E8%A2%AD%20%E9%A9%AC%E5%85%8B%E9%BE%99%E7%A7%B0%E8%B5%9E%E4%B8%A4%E4%BD%8D%E6%B3%95%E5%9B%BD%E4%BA%BA%E8%8B%B1%E5%8B%87%E6%95%91%E4%BA%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
