--- a/articles/rfi/999982.md
+++ b/articles/rfi/999982.md
@@ -1,5 +1,5 @@
-<!--1713278703000-->
-[朔尔兹访问有牛肉成果：中国解禁了](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240416-%E6%9C%94%E5%B0%94%E5%85%B9%E8%AE%BF%E9%97%AE%E6%9C%89%E7%89%9B%E8%82%89%E6%88%90%E6%9E%9C-%E4%B8%AD%E5%9B%BD%E8%A7%A3%E7%A6%81%E4%BA%86)
+<!--1713284102000-->
+[抖音多人揭发每14天向北京传送美国用户个资 官方称属个人不满恶意栽赃](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240416-%E6%8A%96%E9%9F%B3%E5%A4%9A%E4%BA%BA%E6%8F%AD%E5%8F%91%E6%AF%8F14%E5%A4%A9%E5%90%91%E5%8C%97%E4%BA%AC%E4%BC%A0%E9%80%81%E7%BE%8E%E5%9B%BD%E7%94%A8%E6%88%B7%E4%B8%AA%E8%B5%84-%E5%AE%98%E6%96%B9%E7%A7%B0%E5%B1%9E%E4%B8%AA%E4%BA%BA%E4%B8%8D%E6%BB%A1%E6%81%B6%E6%84%8F%E6%A0%BD%E8%B5%83)
 ------
 
-<div>16/04/2024 - 15:40</div><img src="https://s.rfi.fr/media/display/74f0a62c-fbea-11ee-b94f-005056bfb2b6/w:1280/p:16x9/GLQX5FyWAAAdFuC.gif"><p><strong>德国总理朔尔茨在访问北京期间敦促中国同行改善市场准入后，中国海关当局周二表示，中国已解除对部分德国牛肉进口的禁令。        </strong></p><div><p> </p><p>中国今天解除部分德国牛肉进口禁令。中国此前以防止疯牛病的理由对德国牛肉实行进口禁令。</p><p>据路透社今天引述​中国海关总署在微信中表示，这一放宽政策适用于从德国进口的30个月以下小牛的去骨牛肉。</p><p>中国官方说，该变更自4月16日（即公告之日）起生效。</p><p>据朔尔茨周二表示，中国还同意对从德国进口的牛肉和苹果开放边境，并为猪肉进口提供便利。</p><p>朔尔茨是在为期三天的中国之行的最后一天发表上述言论的，期间他会见了中国国家主席习近平，并向中国同行施压，要求提供更好的市场准入，并表示德国不想与中国“脱钩”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWPl.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240416-%25E6%259C%2594%25E5%25B0%2594%25E5%2585%25B9%25E8%25AE%25BF%25E9%2597%25AE%25E6%259C%2589%25E7%2589%259B%25E8%2582%2589%25E6%2588%2590%25E6%259E%259C-%25E4%25B8%25AD%25E5%259B%25BD%25E8%25A7%25A3%25E7%25A6%2581%25E4%25BA%2586&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%9C%94%E5%B0%94%E5%85%B9%E8%AE%BF%E9%97%AE%E6%9C%89%E7%89%9B%E8%82%89%E6%88%90%E6%9E%9C%EF%BC%9A%E4%B8%AD%E5%9B%BD%E8%A7%A3%E7%A6%81%E4%BA%86%20-%20https%3A%2F%2Frfi.my%2FAWPl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%9C%94%E5%B0%94%E5%85%B9%E8%AE%BF%E9%97%AE%E6%9C%89%E7%89%9B%E8%82%89%E6%88%90%E6%9E%9C%EF%BC%9A%E4%B8%AD%E5%9B%BD%E8%A7%A3%E7%A6%81%E4%BA%86%20-%20https%3A%2F%2Frfi.my%2FAWPl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWPl.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%9C%94%E5%B0%94%E5%85%B9%E8%AE%BF%E9%97%AE%E6%9C%89%E7%89%9B%E8%82%89%E6%88%90%E6%9E%9C%EF%BC%9A%E4%B8%AD%E5%9B%BD%E8%A7%A3%E7%A6%81%E4%BA%86&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 17:08</div><img src="https://s.rfi.fr/media/display/fc9c5412-e1f6-11ee-92bb-005056a90284/w:1280/p:16x9/AP22238339577090-1.jpg"><p><strong>美国众议院3月中旬通过法案，要求TikTok与中国母公司字节跳动（ByteDance）脱离关系，否则将予以禁用。TikTok执行长周受资（Shou Zi Chew）则不断在各种管道上声称该公司不会把美国用户的资讯交给北京。然而，《财星》（Fortune）杂志采访曾经在该公司任职过的 11 位人士却显示，周受资所说的并非事实。TikTok前员工证实每14天须向北京传送美国用户个资。        </strong></p><div><p>新头壳今天引述《财星》（Fortune）杂志消息，《财星》采访曾于2022 年 4 月至 9 月担任TikTok资深数据师的特纳（Evan Turner）的说法，指出该公司几乎每隔 14 天就会要他将包含数十万美国用户资料的电子表格，透过电子邮件发送给北京的字节跳动。 这些数据包括 TikTok 美国用户的姓名、电子邮件地址、IP 位址以及地理和人口统计资讯。</p><p>特纳说：“我确实参与了一个向中国提供美国数据的项目。”</p><p>他指控说，“他们完全是共犯。 一些在高层管理人员中工作的美国人完全是这件事的同谋。”</p><p>2022 年之前担任TikTok 安全工程首席技术专案经理的莱恩（Patrick Spaulding Ryan）和另一位前TikTok 美国员工则证实，该公司与字节跳动共享Lark软件，由于这个软件是字节跳动负责经营，字节跳动的员工可以看到 TikTok 员工有关美国用户资料等内容的讨论。</p><p>莱恩指出，TikTok 和字节跳动共享的另一项服务是Seal，但“（TikTok 美国） 员工仍然完全不知道”，没有人知道这套软件是如何运作的。</p><p>该报道采访约翰霍普金斯大学资讯安全研究所主任达布拉（Anton Dahbura）认为，这种联系证明“字节跳动并没有致力于在其中国业务和美国业务之间建立真正的防火墙”。 他表示，前员工对 Lark 与中国的联系的指控“并不令人意外”。</p><p>该报道称，TikTok则声称这些已经离职的员工完全是心怀不满、捏造毫无根据的指控。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWR7.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240416-%25E6%258A%2596%25E9%259F%25B3%25E5%25A4%259A%25E4%25BA%25BA%25E6%258F%25AD%25E5%258F%2591%25E6%25AF%258F14%25E5%25A4%25A9%25E5%2590%2591%25E5%258C%2597%25E4%25BA%25AC%25E4%25BC%25A0%25E9%2580%2581%25E7%25BE%258E%25E5%259B%25BD%25E7%2594%25A8%25E6%2588%25B7%25E4%25B8%25AA%25E8%25B5%2584-%25E5%25AE%2598%25E6%2596%25B9%25E7%25A7%25B0%25E5%25B1%259E%25E4%25B8%25AA%25E4%25BA%25BA%25E4%25B8%258D%25E6%25BB%25A1%25E6%2581%25B6%25E6%2584%258F%25E6%25A0%25BD%25E8%25B5%2583&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%8A%96%E9%9F%B3%E5%A4%9A%E4%BA%BA%E6%8F%AD%E5%8F%91%E6%AF%8F14%E5%A4%A9%E5%90%91%E5%8C%97%E4%BA%AC%E4%BC%A0%E9%80%81%E7%BE%8E%E5%9B%BD%E7%94%A8%E6%88%B7%E4%B8%AA%E8%B5%84%20%E5%AE%98%E6%96%B9%E7%A7%B0%E5%B1%9E%E4%B8%AA%E4%BA%BA%E4%B8%8D%E6%BB%A1%E6%81%B6%E6%84%8F%E6%A0%BD%E8%B5%83%20-%20https%3A%2F%2Frfi.my%2FAWR7.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%8A%96%E9%9F%B3%E5%A4%9A%E4%BA%BA%E6%8F%AD%E5%8F%91%E6%AF%8F14%E5%A4%A9%E5%90%91%E5%8C%97%E4%BA%AC%E4%BC%A0%E9%80%81%E7%BE%8E%E5%9B%BD%E7%94%A8%E6%88%B7%E4%B8%AA%E8%B5%84%20%E5%AE%98%E6%96%B9%E7%A7%B0%E5%B1%9E%E4%B8%AA%E4%BA%BA%E4%B8%8D%E6%BB%A1%E6%81%B6%E6%84%8F%E6%A0%BD%E8%B5%83%20-%20https%3A%2F%2Frfi.my%2FAWR7.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWR7.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%8A%96%E9%9F%B3%E5%A4%9A%E4%BA%BA%E6%8F%AD%E5%8F%91%E6%AF%8F14%E5%A4%A9%E5%90%91%E5%8C%97%E4%BA%AC%E4%BC%A0%E9%80%81%E7%BE%8E%E5%9B%BD%E7%94%A8%E6%88%B7%E4%B8%AA%E8%B5%84%20%E5%AE%98%E6%96%B9%E7%A7%B0%E5%B1%9E%E4%B8%AA%E4%BA%BA%E4%B8%8D%E6%BB%A1%E6%81%B6%E6%84%8F%E6%A0%BD%E8%B5%83&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
