--- a/articles/rfi/999984.md
+++ b/articles/rfi/999984.md
@@ -1,5 +1,5 @@
-<!--1713278702000-->
-[路透社说俄罗斯和中国以废品贸易新铜 以规避纳税和制裁](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240416-%E8%B7%AF%E9%80%8F%E7%A4%BE%E8%AF%B4%E4%BF%84%E7%BD%97%E6%96%AF%E5%92%8C%E4%B8%AD%E5%9B%BD%E4%BB%A5%E5%BA%9F%E5%93%81%E8%B4%B8%E6%98%93%E6%96%B0%E9%93%9C-%E4%BB%A5%E8%A7%84%E9%81%BF%E7%BA%B3%E7%A8%8E%E5%92%8C%E5%88%B6%E8%A3%81)
+<!--1713282301000-->
+[拜登夫妇公布报税资料如下](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240416-%E6%8B%9C%E7%99%BB%E5%A4%AB%E5%A6%87%E5%85%AC%E5%B8%83%E6%8A%A5%E7%A8%8E%E8%B5%84%E6%96%99%E5%A6%82%E4%B8%8B)
 ------
 
-<div>16/04/2024 - 16:04</div><img src="https://s.rfi.fr/media/display/fd84f934-ecf9-11ee-ac05-005056bf30b7/w:1280/p:16x9/2024-03-26T124904Z_2010325684_RC2NT6ALJYU7_RTRMADP_3_RUSSIA-SHOOTING-SECURITY.JPG"><p><strong>三名知情人士告诉路透社，俄罗斯铜生产商 RCC 和中国企业通过以废品贸易的方式避税并规避西方制裁的影响。消息人士称，铜盘条在中国偏远的新疆维吾尔地区被中介机构粉碎，使其难以与废钢区分开来，这使得出口商和进口商都可以从废金属和新金属的关税差异中获利。        </strong></p><div><p>路透社称独家报道：俄罗斯和中国以废品贸易新铜以规避税收和制裁。</p><p>俄罗斯12月份铜杆出口关税为7%，低于废钢10%的关税。进口到中国的铜杆税率为4%，但进口俄罗斯废铜则没有关税。</p><p>在西方制裁下，不存在任何法律障碍阻止中国从俄罗斯公司购买金属。但制造商担心，如果制造商与俄罗斯公司开展业务，他们就会失去客户，包括美国和英国的客户，的出口业务。</p><p>消息人士称，一些中国企业已成立新团队来处理涉俄业务。</p><p>美国的制裁旨在最大限度地减少俄罗斯的出口收入，这也可能意味着处理美元付款的困难，因为国际贸易通常以美元进行。</p><p>中国和俄罗斯数据之间的差异反映了去年 12 月开始的伪装成废金属的新金属销售。对废铜和铜棒的制裁没有区别。</p><p>中国海关数据显示，自去年12月以来，中国从俄罗斯购买的废铜数量显着增加，而路透社从商业数据提供商获得的俄罗斯数据显示，出口到该国最大贸易伙伴的废铜数量可以忽略不计。</p><p>该报道称，在回应路透社关于这一差异的询问时，俄罗斯海关表示：“联邦海关总署暂时不提供外贸数据。”它于 2022 年 4 月俄罗斯入侵乌克兰后不久停止发布贸易数据。从那时起，市场就依赖于商业提供商。</p><p>当被问及与中国公司的铜棒贸易时，受到西方制裁的RCC（即俄罗斯铜业公司）表示，它只向俄罗斯公司供应产品。它没有进一步发表评论。</p><p>中国与俄罗斯接壤的新疆海关没有回复电子邮件询问和电话。</p><p>自2022年2月美国因俄罗斯入侵乌克兰而对其实施制裁后，中国已成为俄罗斯企业寻求出口商品的主要目的地。</p><p>美国和欧盟也因支持俄罗斯在乌克兰的战争而对中国企业实施制裁。</p><p>粉碎新制造的铜线材是伪装看起来与废料非常不同的新材料的有效方法。</p><p>这种新型高纯度铜长而细的棒主要用于制造电力电缆，通常呈盘绕状以便于运输。</p><p>相比之下，废铜是已使用过的电线、管材和管道的混合物。它们被切成谷物大小的碎片，或者像面条包一样卷起来压紧，以便运输。</p><p>消息人士称，由于国际社会谴责镇压维吾尔人，中国限制进入新疆地区，因此粉碎事件没有引起人们的注意。</p><p>除了避税的经济动机外，碎金属更难以识别和追踪，从而更容易出售给中国制造商。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWQA.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240416-%25E8%25B7%25AF%25E9%2580%258F%25E7%25A4%25BE%25E8%25AF%25B4%25E4%25BF%2584%25E7%25BD%2597%25E6%2596%25AF%25E5%2592%258C%25E4%25B8%25AD%25E5%259B%25BD%25E4%25BB%25A5%25E5%25BA%259F%25E5%2593%2581%25E8%25B4%25B8%25E6%2598%2593%25E6%2596%25B0%25E9%2593%259C-%25E4%25BB%25A5%25E8%25A7%2584%25E9%2581%25BF%25E7%25BA%25B3%25E7%25A8%258E%25E5%2592%258C%25E5%2588%25B6%25E8%25A3%2581&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%B7%AF%E9%80%8F%E7%A4%BE%E8%AF%B4%E4%BF%84%E7%BD%97%E6%96%AF%E5%92%8C%E4%B8%AD%E5%9B%BD%E4%BB%A5%E5%BA%9F%E5%93%81%E8%B4%B8%E6%98%93%E6%96%B0%E9%93%9C%20%E4%BB%A5%E8%A7%84%E9%81%BF%E7%BA%B3%E7%A8%8E%E5%92%8C%E5%88%B6%E8%A3%81%20-%20https%3A%2F%2Frfi.my%2FAWQA.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%B7%AF%E9%80%8F%E7%A4%BE%E8%AF%B4%E4%BF%84%E7%BD%97%E6%96%AF%E5%92%8C%E4%B8%AD%E5%9B%BD%E4%BB%A5%E5%BA%9F%E5%93%81%E8%B4%B8%E6%98%93%E6%96%B0%E9%93%9C%20%E4%BB%A5%E8%A7%84%E9%81%BF%E7%BA%B3%E7%A8%8E%E5%92%8C%E5%88%B6%E8%A3%81%20-%20https%3A%2F%2Frfi.my%2FAWQA.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWQA.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%B7%AF%E9%80%8F%E7%A4%BE%E8%AF%B4%E4%BF%84%E7%BD%97%E6%96%AF%E5%92%8C%E4%B8%AD%E5%9B%BD%E4%BB%A5%E5%BA%9F%E5%93%81%E8%B4%B8%E6%98%93%E6%96%B0%E9%93%9C%20%E4%BB%A5%E8%A7%84%E9%81%BF%E7%BA%B3%E7%A8%8E%E5%92%8C%E5%88%B6%E8%A3%81&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 17:26</div><img src="https://s.rfi.fr/media/display/de4dac9c-fa86-11ee-8398-005056bfb2b6/w:1280/p:16x9/AP24103786777136.jpg"><p><strong>根据美国总统拜登及第一夫人吉尔2023年报税资料，美国第一夫妇收入为61万9976美元，其中大部分来自总统的40万美元薪水，以及吉尔在附近维吉尼亚州一所大学任教的8万5985美元的薪水。        </strong></p><div><p>拜登夫妇公布报税资料即申报表，象征性延续了前任总统特朗普时期暂时中断、但展现白宫透明度的传统。</p><p>据法新社说，这个一年一度的不成文传统目的在于建立外界对白宫的信任，其他政治人物和候选人也经常这么做。</p><p>拜登夫妇2023年收入为61万9976美元。2022年拜登夫妇申报57万9514美元收入，2021年拜登申报61万702美元收入。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWRP.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240416-%25E6%258B%259C%25E7%2599%25BB%25E5%25A4%25AB%25E5%25A6%2587%25E5%2585%25AC%25E5%25B8%2583%25E6%258A%25A5%25E7%25A8%258E%25E8%25B5%2584%25E6%2596%2599%25E5%25A6%2582%25E4%25B8%258B&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%8B%9C%E7%99%BB%E5%A4%AB%E5%A6%87%E5%85%AC%E5%B8%83%E6%8A%A5%E7%A8%8E%E8%B5%84%E6%96%99%E5%A6%82%E4%B8%8B%20-%20https%3A%2F%2Frfi.my%2FAWRP.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%8B%9C%E7%99%BB%E5%A4%AB%E5%A6%87%E5%85%AC%E5%B8%83%E6%8A%A5%E7%A8%8E%E8%B5%84%E6%96%99%E5%A6%82%E4%B8%8B%20-%20https%3A%2F%2Frfi.my%2FAWRP.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWRP.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%8B%9C%E7%99%BB%E5%A4%AB%E5%A6%87%E5%85%AC%E5%B8%83%E6%8A%A5%E7%A8%8E%E8%B5%84%E6%96%99%E5%A6%82%E4%B8%8B&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
